--- a/_posts/정보처리기사/2022-12-28-정보처리기사 필기 정리.md
+++ b/_posts/정보처리기사/2022-12-28-정보처리기사 필기 정리.md
@@ -7,3 +7,20 @@ categories: yongrok update
 
 
 시험 날짜
+
+# 1장 프로그래밍 언어 활용
+
+|no|개념|내용|
+|:-|:-------|---:|
+|1|정수형 10진수를 입출력하기 위해 지정함|%d|
+|2|부호 없는 정수형 10진수를 입출력하기 위해 지정함|%u|
+|3|정수형 8진수를 입출력하기 위해 지정함|%o|
+|4|정수형 16진수를 입출력하기 위해 지정함|%x|
+|5|문자를 입출력하기 위해 지정함|%c|
+|6|문자열을 입출력하기 위해 지정함|%s|
+|7|소수점을 포함하는 실수를 입 출력하기 위해 지정함|%f|
+|8|지수형 실수를 입출력하기 위해 지정함|%e|
+|9|long형 10진수를 입출력하기 위해 지정함|%ld|
+|10|long형 8진수를 입출력하기 위해 지정함|%lo|
+|11|long형 16진수를 입출력하기 위해 지정함|%lx|
+|12|주소를 16진수로 입출력하기 위해 지정함|%p|
