--- a/_posts/Github/2023-07-10-Github(5).md
+++ b/_posts/Github/2023-07-10-Github(5).md
@@ -8,3 +8,9 @@ categories: jekyll update
 
 
  Liquid 템플릿 문법
+
+
+깃허브 블로그 운영서버 링크
+ https://github.com/Grokeen/Grokeen.github.io/actions/runs/5506786767/jobs/10035917071
+
+ 
