--- a/_posts/Github/2023-07-10-Github(5).md
+++ b/_posts/Github/2023-07-10-Github(5).md
@@ -5,7 +5,8 @@ date:   2022-12-06 12:45:29 +0900
 categories: jekyll update
 ---
 
-
+대체 몇 일을 썼을까,
+_layout에서 _layouts로 변경하니 인식된다.
 
  Liquid 템플릿 문법
 
@@ -13,4 +14,3 @@ categories: jekyll update
 깃허브 블로그 운영서버 링크
  https://github.com/Grokeen/Grokeen.github.io/actions/runs/5506786767/jobs/10035917071
 
- 
