--- a/_posts/Diery/2023-02-18-명언.md
+++ b/_posts/Diery/2023-02-18-명언.md
@@ -2,7 +2,8 @@
 layout: content
 title:  "명언"
 date:   2023-02-18 12:45:29 +0900
-categories: private
+categories: Certification
+pin: true
 ---
 
 유튜브 좋은 글귀, 명언, 단어
