--- a/_posts/Github/2023-08-16-Github(6).md
+++ b/_posts/Github/2023-08-16-Github(6).md
@@ -1,7 +1,8 @@
 ---
 layout: content
-title:  "GithubBlog(6)"
+title:  "GithubBlog(63)"
 date:   2023-08-16 12:45:29 +0900
 categories: Github
+pin: true
 ---
 
