--- a/_posts/ Certification/2023-08-16-빅데이터분석기사.md
+++ b/_posts/ Certification/2023-08-16-빅데이터분석기사.md
@@ -1,6 +1,6 @@
 ---
 layout: content
-title:  "Bigdata(1)"
+title:  "빅데이터분석기사"
 date:   2023-08-16 12:45:29 +0900
 categories: certification
 pin: true
