--- a/_posts/NAS/2023-05-22-NAS.md
+++ b/_posts/NAS/2023-05-22-NAS.md
@@ -22,3 +22,9 @@ EON 조립 중, 라즈베리파이는 전원이 들어오지만 EON의 전원이
 
 사진과 영상은 여기까지다... 그 이후는 집중하느라 찍지 않았다.
 
+
+
+
++ 7월 현재는 외부에서 사용할 수 있도록 포트포워딩 중 포트를 잃었다.... 인터넷에 검색해보니 다시 하는 방법을 추천하더라, 그냥 집에서 내부 IP로 연결했던 맥북이나 다른 컴퓨터들은 여전히 사용할 수 있었다.
+
+그래서 어쩔 수 없이 가정용으로 사용하는 중이다.
