--- a/_posts/Resume/2023-06-22-resume.md
+++ b/_posts/Resume/2023-06-22-resume.md
@@ -1,6 +1,6 @@
 ---
 layout: content
-title:  "Resume in Korean"
+title:  "이력 정리"
 date:   2023-06-22 12:45:29 +0900
 categories: private
 pin: true
@@ -20,7 +20,7 @@ pin: true
 
 
 
-- 경력
+# 경력
     - 프론트엔드 개발자 
         - 2022.03 ~ 2023.03 메타넷 디지털(주) 위택스 개발팀<BR>
             - 지방세 중 지역자원시설세,자동차세(주행분),지방세외수입 관련 웹 어플리케이션(UI) 개발 및 유지보수<BR>
@@ -30,26 +30,26 @@ pin: true
     
 
 
-- 학력
+# 학력
     - 2016.02 ~ 2022.02 한국산업기술대학교 컴퓨터융합학과
         - 졸업 프로젝트 : 라즈베리파이를 이용한 운동자세 교정 스마트미러 
 
 
-- 병역
+# 병역
     - 2018.01 ~ 2019.09 육군 2사단 만기 전역 
 
 
-- 기타
+# 기타
     - 2017.11.24 제12회 교내 KPU 소프트웨어 경진 대회 입상
     - 2020.10.20 ~ 2020.12.15 IOT-인공지능-빅데이터 수업 도우미
     - 2021.09.28 ~ 2021.12.08 프로그래밍 기초(파이썬) 비교과 수업 도우미
     - 2021.11.02 ~ 2021.12.21 사물인터넷을 품은 미래사회 수업 도우미
     - 2021.06 ~ 2021.11 KIC 캠퍼스, 실무 프로젝트 기반 빅데이터 플랫폼 개발 및 분석 전문가 양성 과정 교육 이수
     - 2022.11 ADSP 자격증 취득
-    - 2023.07 정보처리기사 자격증 취득
-    - 2023.08 SQLD 자격증 취득 
+    - 2023.09 정보처리기사 자격증 취득
+
         
-- 프로젝트
+# 프로젝트
     - 온라인 포트폴리오 웹사이트 (2023 - 현재)
         - 개인 프로젝트로 제작한 온라인 포트폴리오 웹사이트
         - Spring을 사용하여 프론트엔드 개발
