success time date

--- a/_posts/RaspberryPi/NAS/2023-05-22-NAS.md
+++ b/_posts/RaspberryPi/NAS/2023-05-22-NAS.md
@@ -2,13 +2,13 @@
 layout: content
 title:  "NAS"
 date:   2023-05-22 12:45:29 +0900
-categories: raspberryPI
+categories: RaspberryPI
 pin: true
 ---
 
 
 - 알리에서 16만원 정도에 EON을 구매했다.
-<img src="/img/blogimg/NAS/N1-1.jpeg" style="height:500px">
+<img src="/img/blogimg/RaspberryPi/NAS/N1-1.jpeg" style="height:500px">
 
 
 
