--- a/_posts/Resume/2023-06-22-resume.md
+++ b/_posts/Resume/2023-06-22-resume.md
@@ -2,7 +2,7 @@
 layout: content
 title:  "이력 정리"
 date:   2023-06-22 12:45:29 +0900
-categories: private
+categories: resume
 pin: true
 ---
 
@@ -18,9 +18,7 @@ pin: true
 <table>
     <thead></thead>
 </table>
-이메일 : ygreen0516@google.com<BR>
-깃허브 : https://github.com/Grokeen<BR>
-링키드인 : https://www.linkedin.com/in/grokeen-b551a8283/ <br>
+- [링키드인](https://www.linkedin.com/in/grokeen-b551a8283/)
 
 
 
