--- a/_posts/ChatGPT/Tips/2023-08-21-Tips.md
+++ b/_posts/ChatGPT/Tips/2023-08-21-Tips.md
@@ -9,5 +9,5 @@ pin: true
 
 
 # custom instruction 어디서 전체본을 확인 할수 있을까
-<img src="/img/blogimg/ChatGPT/Tips/1-12.png" style="height:500px"><br>
+<img src="/img/blogimg/ChatGPT/Tips/T1-1.png" style="height:auto"><br>
 
