--- a/_posts/BigData/2023-08-16-빅데이터분석기사.md
+++ b/_posts/BigData/2023-08-16-빅데이터분석기사.md
@@ -1,9 +1,9 @@
 ---
 layout: content
-title:  "빅데이터분석기사 강의"
+title:  "[빅데이터분석기사][D-108][D-100] Edu A to Z 100일 강의 메일 정리"
 date:   2023-08-16 12:45:29 +0900
-categories: certification
-pin: true
+categories: Big Data Analyse Certification
+pin: false
 ---
 
 ### 23년 빅데이터 분석 기사 학습안내
