--- a/_posts/BigData/DailyQuiz/2023-08-20-데일리퀴즈메일.md
+++ b/_posts/BigData/DailyQuiz/2023-08-20-데일리퀴즈메일.md
@@ -1,9 +1,9 @@
 ---
 layout: content
-title:  "빅데이터분석기사 데일리퀴즈 메일"
+title:  "[빅데이터분석기사][D-104][D-96] Edu A to Z 데일리 퀴즈 안내 메일"
 date:   2023-08-20 12:45:29 +0900
-categories: certification
-
+categories: Big Data Analyse Certification
+pin: false
 ---
 
 
