--- a/_posts/BigData/DailyQuiz/2023-08-22-Quiz29(1).md
+++ b/_posts/BigData/DailyQuiz/2023-08-22-Quiz29(1).md
@@ -13,10 +13,14 @@ pin: false
 - <input type="radio" name="S3753" value="3"> 차봉
 - <input type="radio" name="S3753" value="4"> 분짜
 
-
+```
 정답 : 차분
-
+```
 ****
+
+
+
+
 
 ### ❌ [from adsp][S3-75] 4. 다음 시계열 자료의 정상성(stationary)에 대한 설명 중 가장 부적절한 것은?
 - <input type="radio" name="S3754" value="1"> 모든 시점에 대해 일정한 평균을 가진다.
@@ -24,8 +28,9 @@ pin: false
 - <input type="radio" name="S3754" value="3"> 공분산은 단지 시차에만 의존하고 시점 자체에는 의존하지 않는다.
 - <input type="radio" name="S3754" value="4"> 분산은 시점(t)에 대해, 공분산은 시차(h)에 대해 의존한다.
 
+```
 정답 : 분산은 시점(t)에 대해, 공분산은 시차(h)에 대해 의존한다.
-
+```
 #### 오답 : 시계열 자료의 정상성(stationarity)은 매우 중요한 개념으로, 많은 시계열 분석 기법의 기본 가정이다. 정상성은 크게 세 가지 주요 특성과 관련이 있다.
 1. 평균이 일정하다: 
     시계열의 모든 시점에서 평균이 일정하면, 시간에 따른 추세(trend)나 계절성(seasonality)과 같은 패턴이 없음을 의미합니다. 평균이 변하지 않는다는 것은 데이터의 중심 경향이 일정하다는 것을 나타냅니다.
@@ -35,40 +40,89 @@ pin: false
     시계열의 모든 시점에서 분산이 일정하면, 시간에 따라 데이터의 변동성이 일정하다는 것을 의미합니다. 분산이 일정하다는 것은 데이터가 평균 주위로 일정하게 퍼져 있다는 것을 나타냅니다.
     - 예시: 일별 주가 변동률을 측정한 경우, 일별 변동률의 퍼짐 정도가 일정하다면 이 조건이 만족됩니다.
     - 𝑽𝒂𝒓(𝒙_𝒕) =𝝈^𝟐 
-3. 공분산이 시점에 의존하지 않고 시차에만 의존한다: 
+3. 공분산이 **시점에 의존하지 않고 시차에만 의존**한다: 
     같은 시차를 가진 두 시점 사이의 관계가 일정하면, 데이터의 시간 구조가 일정하다는 것을 의미합니다. 이는 데이터 사이의 상관 관계가 시간의 흐름에 영향을 받지 않는다는 것을 나타냅니다.
     - 예시: 월별 판매량 데이터에서, 같은 시즌의 월별 판매량 사이의 관계가 일정하다면 이 조건이 만족됩니다.
     - 𝑪𝒐𝒗(𝒙_(𝒕+𝒉),𝒙_𝒕) =𝜸_𝒉
 
-추가적으로 비정상 시계열은 종종 차분(differencing)이나 변환(transformation) 등의 기법을 사용하여 정상 시계열로 변환할 수 있습니다. 이렇게 변환된 데이터는 ARIMA와 같은 모델에 적용할 수 있으며, 더 정확한 예측을 얻을 수 있습니다.
+추가적으로 비정상 시계열은 종종 **차분(differencing)이나 변환(transformation)** 등의 기법을 사용하여 **정상 시계열로 변환**할 수 있습니다. 이렇게 **변환된 데이터는 ARIMA와 같은 모델에 적용**할 수 있으며, 더 정확한 예측을 얻을 수 있습니다.
 
 ****
+
+
+
+
 
 ### ❌ [from adsp][S3-75] 5. 다음 중 정상시계열에 대한 설명 중 가장 적절하지 않은 것은?
 - <input type="radio" name="S3755" value="1"> 평균이 일정한 경우에 현시점의 자료에서 전 시점의 자료를 빼는 것으로 정상시계열로 변환한다.
 - <input type="radio" name="S3755" value="2"> 비정상시계열 자료는 정상성을 만족하도록 데이터를 정상시계열로 만든 후 시계열 분석을 수행한다.
 - <input type="radio" name="S3755" value="3"> 정상성이란 평균, 분산이 일정하고, 공분산은 단지 시차에만 의존하는 경우를 말한다.
 - <input type="radio" name="S3755" value="4"> 시간에 따라 분산이 일정하지 않은 경우에는 변환을 통해서 정상시계열로 바꿀 수 있다.
-
+```
 정답 : 평균이 일정한 경우에 현시점의 자료에서 전 시점의 자료를 빼는 것으로 정상시계열로 변환한다.
-
+```
 #### 오답 : 평균이 일정하지 않은 경우 원시계열에 차분(현 시점의 자료 값에서 전 시점의 자료 값을 빼 주는 것)을 하면 정상시계열이 된다.
+비정상 시계열
+    비정상 시계열은 시간에 따라 평균, 분산, 공분산 등의 통계적 특성이 변화하는 시계열을 의미합니다. 비정상 시계열은 **추세나 계절성과 같은 구조를 포함**할 수 있으며, **이로 인해 시계열 분석이 복잡**해질 수 있습니다.
+
+변환 과정으로 비정상 시계열 파악하기
+
+    1) 비정상성의 원인 파악
+    추세나 계절성 등 비정상성의 원인을 파악해야 합니다. 
+    이를 위해 시각화 도구나 통계적 검정을 사용할 수 있습니다.
+
+    2) 추세 제거
+    추세가 있으면 차분(differencing)이나 회귀분석을 통해 제거할 수 있습니다. 
+    일반적으로 1차 차분을 통해 추세를 제거합니다.
+
+    3) 계절성 제거
+    계절성이 있는 경우 계절 차분을 적용하여 제거할 수 있습니다. 
+    계절 차분은 특정 시즌 간격으로 데이터를 차분하는 것을 의미합니다. 
+    예를 들어, 연간 계절성을 가진 월별 데이터의 경우 12개월 차분을 수행합니다.
+
+    4) 변환 및 필터링
+    로그 변환, 제곱근 변환 등의 수학적 변환 또는 필터링 방법을 사용하여 분산의 안정성을 높일 수 있습니다.
+
+    5) 정상성 검정
+    변환 후 정상성을 검정하여 변환이 충분히 이루어졌는지 확인합니다. 
+    Dickey-Fuller 검정과 같은 통계적 방법을 사용합니다.
+
+    6) 정상 시계열 분석
+    정상성을 만족하도록 변환된 시계열에 대해 일반적인 시계열 분석 방법을 적용합니다. 
+    ARIMA 모델과 같은 기법을 사용할 수 있습니다.
+
+이러한 과정은 비정상 시계열을 분석할 때 필수적이며, 데이터의 **복잡한 패턴을 단순화**하여 예측 **성능을 향상**시키는 데 도움이 됩니다
+
 
 
 ****
+
+
+
+
 
 ### ❌ [from adsp][S3-77]  1. 다음이 설명하는 시계열 모형은 무엇인가? 현시점의 자료를 유한 개의 백색잡음의 선형결합으로 표현되었기 때문에 항상 정상성을 만족한다. 자기 상관 함수(ACF) q+1 시차 이후 절단된 형태를 취한다.
 - <input type="radio" name="S3771" value="1"> MA 모형
 - <input type="radio" name="S3771" value="2"> AR 모형
 - <input type="radio" name="S3771" value="3"> ARMA 모형
 - <input type="radio" name="S3771" value="4"> ARIMA 모형
-
+```
 정답 : MA 모형
-
+```
 #### 오답 : 
 AR모형 - 현시점의 백색잡음 + 자기 자신의 과거 값
 MA모형 - 유한 개의 백색잡음의 선형결합
-ARIMA 모형은 비정상 시계열이라서 차분 해야합니다! ^^
+ARIMA 모형은 비정상 시계열이라서 차분 해야합니다!
+
+
+
+
+
+
+
+
+
+
 
 ****
 
@@ -77,22 +131,33 @@ ARIMA 모형은 비정상 시계열이라서 차분 해야합니다! ^^
 - <input type="radio" name="S3772" value="2"> 2
 - <input type="radio" name="S3772" value="3"> 3
 - <input type="radio" name="S3772" value="4"> 4
-
+```
 정답 : 2
-
+```
 #### 오답 : 
 ARIMA(p, d, q) -> p : AR모형 차수, d : 차분, q: MA모형 차수
 ARIMA(1, 2, 3) 이라면 2번 차분해서 ARMA 모형이 될 수 있음
 
 ****
 
+
+
+
+
+
 ### ⭕️ [from adsp][S3-78] 1. 다음 중 정상시계열에 대한 설명 중 가장 적절하지 않은 것은?
 - <input type="radio" name="S3781" value="1"> 추세요인 : 자료의 그림을 그렸을 때 그 형태가 오르거나 내리는 등 자료가 어떤 특정한 형태를 취할 때
 - <input type="radio" name="S3781" value="2"> 계절요인 : 고정된 주기에 따라 자료가 변화하는 경우
 - <input type="radio" name="S3781" value="3"> 순환요인 : 물가상승률, 급격한 인구 증가 등의 이유로 주기를 가지고 변화하는 자료
 - <input type="radio" name="S3781" value="4"> 불규칙요인 : 위 세 가지 요인으로 설명할 수 없는 요인에 의해 발생
-
+```
 정답 : 순환요인 : 물가상승률, 급격한 인구 증가 등의 이유로 알려지지 않은 주기를 가지고 자료가 변화하는 경우
+```
+
+
+
+
+
 
 ****
 
@@ -101,5 +166,9 @@ ARIMA(1, 2, 3) 이라면 2번 차분해서 ARMA 모형이 될 수 있음
 - <input type="radio" name="S3033Q01" value="2"> 공통요인
 - <input type="radio" name="S3033Q01" value="3"> 계절요인
 - <input type="radio" name="S3033Q01" value="4"> 순환요인
-
+```
 정답 : 공통요인
+```
+
+
+
