--- a/_posts/BigData/DailyQuiz/2023-08-23-Quiz30.md
+++ b/_posts/BigData/DailyQuiz/2023-08-23-Quiz30.md
@@ -1,9 +1,152 @@
 ---
 layout: content
-title:  "[빅데이터분석기사][D-101][D-93] Edu A to Z 데일리 퀴즈 30 "
+title:  "[빅데이터분석기사][D-101][D-93] Edu A to Z 데일리 퀴즈 30 오답"
 date:   2023-08-23 12:45:29 +0900
 categories: Big Data Analyse Certification
 pin: false
 ---
 
 
+
+# 데일리 퀴즈 2일차 오답 정리
+
+
+### [S3-03] 4Q-2. 새로운 질병 A가 발견되었다. 질병 A를 전체 국민의 P(A) 정도가 앓고 있으며, 전체 국민 중 어느 한 사람이 질병 A를 앓지 않는 건강한 사람일 확률은 P(B)라고 한다. 검진을 했을 때 질병 A에 걸린 사람을 정확히 검진할 확률이 P(x|A) 이며, 질병 A를 앓지 않는 건강한 사람이 질병 A에 걸렸다고 검진할 확률이 P(x|B)이다. P(A), P(B), P(x|A), P(x|B) 를 가지고, 어떤 사람을 검진해서 질병 A에 걸렸다는 결과가 나왔을 때, 그 사람이 실제로 질병 A를 앓지 않는 건강한 사람일 확률 P(B|x)의 수식을 구하시오.
+
+- <input type="radio" name="S3033Q06" value="1"> 1.<img src="/img/blogimg/BigData/DailyQuiz/30-1.1.png" style="height:250px">
+
+- <input type="radio" name="S3033Q06" value="2"> 2.<img src="/img/blogimg/BigData/DailyQuiz/30-1.2.png" style="height:250px">
+- <input type="radio" name="S3033Q06" value="3"> 3.<img src="/img/blogimg/BigData/DailyQuiz/30-1.3.png" style="height:250px">
+- <input type="radio" name="S3033Q06" value="4"> 4.<img src="/img/blogimg/BigData/DailyQuiz/30-1.4.png" style="height:250px">
+- <input type="radio" name="S3033Q06" value="4"> 5.<img src="/img/blogimg/BigData/DailyQuiz/30-1.5.png" style="height:250px">
+
+
+```
+정답 : 4번
+```
+
+
+
+
+****
+
+
+### [S3-03] 5Q-1. 사회관계망분석(Social Network Analysis)에서 중심성 분석으로 적절하지 않은 것은?
+<input type="radio" name="S3-035Q1" value="1"> 근접중심성
+<input type="radio" name="S3-035Q1" value="2"> 매개중심성
+<input type="radio" name="S3-035Q1" value="3"> 포괄중심성
+<input type="radio" name="S3-035Q1" value="4"> 아이겐벡터중심성
+
+
+```
+정답 : 포괄중심성
+```
+
+### 오답
+1) 사회관계망 분석/사회 연결망 분석이란? 
+    사회 연결망 데이터를 활용하여 사회 연결망과 사회 구조등을 사회과학적으로 분석
+
+2) SNA에서의 중심성 분석 종류(요소)
+- 연결 정도(degree) 중심성
+- 근접(closeness) 중심성
+- 매개(betweenness) 중심성
+- 위세(eigenvector) 중심성
+
+3) 분석 종류(요소) 개념
+- 연결정도(degree)
+연결정도는 노드간의 총 연결관계 개수를 의미한다. 즉 한 노드가 몇 개의 노드와 연결되어 있는지의 정도이다.
+
+- 포괄성(inclusiveness)
+포괄성은 한 네트워크 내에서 서로 연결된 노드의 개수를 뜻한다. 전체 네트워크에서 연결되어 있지 않은 노드들을 제거하고 남은 노드의 개수이다.
+
+- 밀도(density)
+네트워크 내에서 노드 간의 전반적인 연결정도 수준을 나타내는 지표이다. 즉 연결망 내 전체 구성원이 서로 간에 얼마나 많은 관계를 맺고 있는지를 표현한다. 네트워크 내에 존재하는 최대 가능한 관계 대비 실제 형성된 관계의 개수 비율로 계산하게 된다.
+
+- 연결정도 중심성(degree centrality)
+연결정도 중심성이란 한 노드가 연결망 내에서 연결된 다른 노드들의 합을 말한다. 이를 통해 한 노드가 얼마나 많은 노드들과 관계를 맺고 있는지를 파악할 수 있으며, 해당 노드가 얼마나 많은 관계에 관여하는지 파악할 수 있다. 연결정도가 높은 노드는 다른 노드들과의 관계를 통해 정보 획득에 용이할 것이며, 네트워크 내에 핵심노드일 가능성이 높다.
+
+- 근접 중심성(closeness centrality)
+근접 중심성이란 각 노드 간의 거리를 바탕으로 중심성을 측정하는 방식이다. 연결정도 중심성은 직접 연결된 노드의 개수만을 파악한다면, 근접 중심성은 간접적으로 연결되어 있는 모든 노드간의 거리를 바탕으로 중심성을 측정한다. 직접 연결되어 있는 사람들을 통해 접근할 수 있는 간접적인 노드 간의 관계까지 파악하며, 연결정도 중심성보다 넓은 범위에서 중심성을 측정하게 된다. 간접적인 중심성이 크다면, 핵심 노드와의 관계가 많다는 뜻으로 다수의 핵심 노드들과의 관계를 통해 해당 네트워크 내의 핵심 노드일 가능성이 높다.
+
+- 매개 중심성(Betweenness centrality)
+네트워크 내에서 한 노드가 다른 노드들 사이에 위치하는 정도를 나타내는 지표이다. 즉 네트워크 내에서 어디에 위치하는지를 파악함으로써 해당 노드의 영향력을 파악할 수 있다. 네트워크 내의 매개 중심성이 높은 노드는 다른 핵심 노드들 사이에서의 중재자(broker) 역할을 수행하게 되며 핵심 노드로서 기능할 가능성이 높다.
+
+- 아이겐벡터 중심성(Eigenvector centrality)
+네트워크 내에 한 노드와 연결된 다른 액터의 중심성을 가중치로 하여 계산하는 방식이다. 즉 자신과 연결된 다른 노드들이 네트워크 내에서 얼마나 중요한지 파악하는 지표이다. 아이겐벡터 중심성이 높다면 연결정도가 적다 하더라도 높은 영향력을 가지며, 반대로 연결정도는 높지만 아이겐벡터 중심성이 낮다면 네트워크 내의 실질적인 영향력은 미미할 것으로 예측할 수 있다.
+
+[사회 연결망 분석 참고](https://ko.wikipedia.org/wiki/%EC%82%AC%ED%9A%8C_%EC%97%B0%EA%B2%B0%EB%A7%9D_%EB%B6%84%EC%84%9D)
+
+****
+
+
+
+### [ADsP 37-3] 22. 텍스트마이닝 관련 설명으로 올바르지 않은 것은?
+<input type="radio" name="ADsP37-322" value="1"> 자연어처리(NLP) 방식으로 특징 추출, 요약, 분류, 군집화 등 의미를 도출하는 분석이다.
+<input type="radio" name="ADsP37-322" value="2"> 비구조화된 텍스트에서 구조화된 데이터로 변환하는 방법을 코퍼스라고 한다.
+<input type="radio" name="ADsP37-322" value="3"> 텍스트 마이닝 전처리 작업에는 클렌징, 토큰화, 불용어 제거, 어간 추출, 표제어 추출 등이 있다.
+<input type="radio" name="ADsP37-322" value="4"> 감정분석 및 워드 클라우드 등의 패턴 분석을 할 수 있다.
+
+
+
+
+```
+정답 : 비구조화된 텍스트에서 구조화된 데이터로 변환하는 방법을 코퍼스라고 한다.
+```
+
+### 오답
+Text To Vector 변환 기법
+- 텍스트 데이터 분석을 위해 단어를 벡터화 하는 변환 기법
+- Bag of words, TF-IDF, Word Embedding, Word2Vec 등이 있음
+
+CORPUS : 자연언어 연구를 위해 특정한 목적을 가지고 언어의 표본을 추출한 집합
+
+
+
+****
+
+
+### [ADsP 37-3] 23. 사회연결망분석에서 연결망을 표현하는 분석 방법으로 옳지 않은 것은?
+<input type="radio" name="ADsP37-323" value="1"> K-means
+<input type="radio" name="ADsP37-323" value="2"> 네트워크 그래프(Network Graph)
+<input type="radio" name="ADsP37-323" value="3"> 클러스터링(Clustering)
+<input type="radio" name="ADsP37-323" value="4"> 영향력 분석(Influence Analysis)
+
+
+
+```
+정답 : K-means
+```
+
+### 오답
+사회연결망분석에서 연결망을 표현하는 분석 방법의 종류
+- 노드 및 엣지 리스트
+- 인접 행렬(Adjacency Matrix)
+- 네트워크 그래프(Network Graph)
+- 영향력 분석(Influence Analysis)
+- 군집화(Clustering) 분석
+- 전파(Propagation) 분석
+
+
+
+****
+
+
+
+### [ADsP 37-3] 24. 사회관계망분석(Social Network Analysis)에서 중심성 분석으로 적절하지 않은 것은?
+<input type="radio" name="ADsP37-324" value="1"> 연결중심성(Degree centrality)
+<input type="radio" name="ADsP37-324" value="2"> 근접중심성(Closeness centrality)
+<input type="radio" name="ADsP37-324" value="3"> 매개중심성(Betweenness centrality)
+<input type="radio" name="ADsP37-324" value="4"> 링크중심성(Link centrality)
+
+
+```
+정답 : 링크중심성(Link centrality)
+```
+
+### 오답
+사회관계망분석(SNA)에서의 중심성 분석 종류
+- 중심성(Centraility) : 한 행위자가 전체 연결망에서 중심에 위치하는 정도
+- 연결 정도(Degree) 중심성
+- 근접(Closeness) 중심성
+- 매개(Betweenness) 중심성
+- 위세(Eigenvector) 중심성
