--- a/_posts/Resume/2022-12-26-resume.md
+++ b/_posts/Resume/2022-12-26-resume.md
@@ -3,7 +3,7 @@ layout: content
 title:  "이력 정리"
 date:   2022-12-26 12:45:29 +0900
 categories: resume
-pin: false
+
 ---
 
 
@@ -15,9 +15,7 @@ pin: false
 
 
 
-<table>
-    <thead></thead>
-</table>
+
 - [링키드인](https://www.linkedin.com/in/grokeen-b551a8283/)
 
 
@@ -33,12 +31,14 @@ pin: false
 
 
 # 학력
-    - 2016.02 ~ 2022.02 한국산업기술대학교 컴퓨터융합학과
+    - 2016.02.29 ~ 2022.02.18 한국산업기술대학교 컴퓨터융합학과
         - 졸업 프로젝트 : 라즈베리파이를 이용한 운동자세 교정 스마트미러 
+        - 학점 : 3.52 / 132학점
+        - 전공 학점 : 3.64 / 72학점
 
 
 # 병역
-    - 2018.01 ~ 2019.09 육군 2사단 만기 전역 
+    - 2018.01.30 ~ 2019.09.30 육군 2사단 만기 전역 
 
 
 # 기타
@@ -47,8 +47,11 @@ pin: false
     - 2021.09.28 ~ 2021.12.08 프로그래밍 기초(파이썬) 비교과 수업 도우미
     - 2021.11.02 ~ 2021.12.21 사물인터넷을 품은 미래사회 수업 도우미
     - 2021.06 ~ 2021.11 KIC 캠퍼스, 실무 프로젝트 기반 빅데이터 플랫폼 개발 및 분석 전문가 양성 과정 교육 이수
-    - 2022.11 ADSP 자격증 취득
-    - 2023.09 정보처리기사 자격증 취득
+         본 과정은 빅데이터 플랫폼 기반 자바&파이썬 개발자 양성과정으로, 웹 프로그래밍(java,jsp,spring)부터 시작하여, 
+         머신러닝(python), 딥러닝(tensorflow)까지 전반적인 개발 환경을 습득합니다. 
+         현업기업 실무자 멘토링을 통한 프로젝트 중심으로, 실습 위주의 훈련 과정입니다. (840시간)        
+    - 2022.11.25 ADSP 자격증 취득 (한국데이터산업진흥원 ADsP-035002472)
+    - 2023.09.01 정보처리기사 자격증 취득 (한국산업인력공단 23202190101X)
 
         
 # 프로젝트
