--- a/_posts/Resume/2022-03-17-경력기술서.md
+++ b/_posts/Resume/2022-03-17-경력기술서.md
@@ -33,14 +33,14 @@ pin: false
 
 
 
-# 우편 모아
+# 리눅스 환경 원격 세팅 경험(우편 모아)
 이제 위택스 차세대를 진행하면서, 우편 모아라고 자치단체 마다 파일 전송할 수 있는 프로그램을 리눅스에 설치해야 했습니다.
 일주일 동안 하는 작업ㅈ에 직접 자원해서, 163개?의 자치단체 서버 마다 직접 접속해서 환경변수 설정 후 우편 모아를 설치했던 기억이 있습니다.
 Telnet이나 SSH를 이용했으며, 개발원에서 리눅스를 잘 다룬다고, 과장님인 줄 알았다고, 과장님이라 부르셨던 기억이 있습니다.
 
 
 
-# 단점 1. 공무원의 연락
+# DB 및 사람 상대한 경험(공무원의 연락,담배소비세)
 행안부 소속 한국지역정보개발원
 형식상 절차는
     민원 -> 자치단체 공무원 -> 행안부 -> 한국지역정보개발원 -> 회사 콜팀 -> 운영팀 -> 개발팀
