--- a/_posts/Resume/2023-09-21-23년지원기업피드백.md
+++ b/_posts/Resume/2023-09-21-23년지원기업피드백.md
@@ -22,8 +22,8 @@ pin: false
 |9|2023 10 31| [플레닛헬스캐어](https://www.jobkorea.co.kr/Recruit/GI_Read/42863489?Oem_Code=C1)|중소| 데이터 엔지니어||||
 
 
-|11|2023 10 03|[CJ올리브네트웍스]()|대|||||
-|12|2023 10 03|[롯데정보통신]()|대|||||
+|11|2023 10 03|[CJ올리브네트웍스](https://recruit.cj.net/recruit/ko/recruit/recruit/detail.fo?zz_jo_num=7647)|대|||||
+|12|2023 10 03|[롯데정보통신](https://recruit.lotte.co.kr/apply/announcement/detail/21115485?compcd=?id=bookmark1000)|대|||||
 |13|2023 10 03|[한화시스템]()|대|||||
 |14|2023 10 06|[DB금융투자]()|대|||||
 |10|2023 10 09|[NICE 그룹](https://nice.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=158255)|대|신입 Java 개발||||
