--- a/_posts/Resume/2022-12-26-resume.md
+++ b/_posts/Resume/2022-12-26-resume.md
@@ -10,24 +10,26 @@ categories: resume
 
 <img src="/img/blogimg/Resume/green.jpeg" style="height:300px">
 
-김용록
+김용록/金容綠
 ===
-
-
-
-
 - [링키드인](https://www.linkedin.com/in/grokeen-b551a8283/)
-
 
 
 # 경력
     - 프론트엔드 개발자 
         - 2022.03 ~ 2023.03 메타넷 디지털(주) 위택스 개발팀
-            - 지방세 중 지역자원시설세,자동차세(주행분),지방세외수입 관련 웹 어플리케이션(UI) 개발 및 유지보수
+            - 당담 업무 :
+                지방세(지역자원시설세,자동차세(주행분),지방세외수입) 관련 웹 어플리케이션(UI) 개발 및 유지보수
             - Spring을 활용한 컴포넌트 기반 개발
             - HTML, CSS, JavaScript를 사용하여 사용자 경험 향상 및 웹 성능 최적화
             - SVN을 사용한 소스 코드 관리 및 협업
-    
+            - 경력 기술서(업무 성과)
+                핵심 성과 : 차세대 개발로 팀원의 66%가 공석인 상황에서 무리 없이 대처.
+                역할 : 지역자원시설세,지방세외수입,레저세,자동차세(주행분),담배소비세 등 개발 및 유지보수
+                획득역량 : Spring 로직 개발 경험.
+                적용 포인트 : 트래픽 대처 및 문제해결능력
+            - 프로젝트 : 재산세(세율특례) 자동 계산기 설계, 지역자원시설세 실명인증 추가 등
+            - 퇴직사유 : 계약만료, 당시 근무했던 회사도 좋았지만, 공공기관 SI가 업무적으로 부족하다 느껴, 더 경험을 얻고자 나오게 되었습니다.
 
 
 # 학력
@@ -35,31 +37,77 @@ categories: resume
         - 입문계
 
     - 2016.02.29 ~ 2022.02.18 한국산업기술대학교 컴퓨터융합학과
-        - 졸업 프로젝트 : 라즈베리파이를 이용한 운동자세 교정 스마트미러 
+        - 졸업 프로젝트 : 라즈베리파이를 이용한 운동자세 교정 스마트미러
         - 학점 : 3.52 / 132학점
-        - 전공 학점 : 3.64 / 72학점
-        - 공학 계열
-        - 수강 과목(자바기초,자바응용 4.5/4.5)
-
+            전공 학점 : 3.64 / 72학점
+            학년 별 학점 : 3.33/3.42 3.33/3.25 3.7/3.67 3.7/4
+            수강 과목(자바기초,자바응용 4.5/4.5)
+        - 계열 : 공학 계열
+        - 단과대 : 기업인재대학
+        
 
 # 병역
-    - 2018.01.30 ~ 2019.09.30 육군 2사단 만기 전역 
-
+    - 2018.01.30 ~ 2019.09.30 육군 2사단 만기 전역
+        - 중대 내 휴가 보유 일 수 3위 달성.
+        - 소대 통신병으로 통신 장비를 다뤄 본 경험이 있습니다. 
+        - 선임 그리고 분대장으로써 책임감과 리더쉽을 배울 수 있었습니다.
+        
 
 # 기타
-    - 2017.11.24 제12회 교내 KPU 소프트웨어 경진 대회 입상
-    - 2020.10.20 ~ 2020.12.15 IOT-인공지능-빅데이터 수업 도우미
-    - 2021.09.28 ~ 2021.12.08 프로그래밍 기초(파이썬) 비교과 수업 도우미
-    - 2021.11.02 ~ 2021.12.21 사물인터넷을 품은 미래사회 수업 도우미
+    - 2017.11.24 제12회 교내 KPU 소프트웨어 경진 대회 입상 , 한국공학대학교(한국산업기술대학교)
+        군대 가기 전에 스스로의 위치를 확인하고자 치뤘던 시험으로, 운이 좋게 입상을 주셨습니다.
+
+    - 2020.10.20 ~ 2021.12.21 한국공학대학교(한국산업기술대학교) 교내 수업 도우미
+        - 2020.10.20 ~ 2020.12.15 IOT-인공지능-빅데이터 수업 도우미
+        - 2021.09.28 ~ 2021.12.08 프로그래밍 기초(파이썬) 비교과 수업 도우미
+        - 2021.11.02 ~ 2021.12.21 사물인터넷을 품은 미래사회 수업 도우미
+        사물 인터넷 수업에 조교로 참여하여 라즈베리파이 분석을 통해 전년 대비 수업 만족도 12% 증가. 
+        학교에서 강의 영상 편집을 하던 중 한 교수님을 만나 실습 수업 진행 시 많은 학생들을 혼자 보지 못하여 도우미를 구하시고 있다는 소식을 접했습니다. 졸업작품에 관한 라즈베리파이의 이해와 학생들이 원활하게 수업 진행하면서 교수님의 졸업작품에 대한 도움을 얻기 위해 도우미로 참여하였습니다. 우선 학생들이 원하는 수업 방식을 가벼운 대화를 통해 니즈를 파악하였습니다. 학생 별로 ` 진도가 빠르다. ` 혹은 ` 느리다. ` 라며, 수업의 진도에 대한 불만이 많았습니다. 
+        라즈베리파이의 GPIO를 실습하다 보면 많은 하드웨어(물리)적 문제가 발생합니다. 첫 번째로 ` 라즈베리파이4 정석 `, 책을 이용하여 센서에 대한 정보를 탐색하였습니다. 두 번째, 구글링을 통하여 센서의 사용 가능 유무를 직접 코딩하며 실험해, 동작하는 센서를 구분하였습니다. 과전류에 따른 브레드 보드 및 센서의 손상 문제에 대해 사전에 방지하였습니다. 마지막으로 진도 문제를 해결하기 위해 뒤처진 학생들을 맡았으며, 학생들의 수업 참여율을 높였습니다. 그리하여 시간은 절약되고, 수업의 질을 높일 수 있었습니다. 결과적으로 기말고사 후 작년 대비 수업 만족도 12% 증가한 것을 확인하였으며, 교수님의 만족도 충족시킬 수 있었습니다.
+
     - 2021.06.14 ~ 2021.11.18 KIC 캠퍼스, 실무 프로젝트 기반 빅데이터 플랫폼 개발 및 분석 전문가 양성 과정 교육 이수
-        본 과정은 빅데이터 플랫폼 기반 자바&파이썬 개발자 양성과정으로, 웹 프로그래밍(java,jsp,spring)부터 시작하여, 머신러닝(python), 딥러닝(tensorflow)까지 전반적인 개발 환경을 습득하고, 현업기업 실무자 멘토링을 통한 프로젝트 중심으로, 실습 위주의 훈련 과정입니다. (840시간)        
+        빅데이터 플랫폼 기반 자바&파이썬 개발자 양성과정으로, 웹 프로그래밍(java,jsp,spring)부터 시작하여, 머신러닝(python), 딥러닝(tensorflow)까지 전반적인 개발 환경을 습득하고, 현업기업 실무자 멘토링을 통한 프로젝트 중심으로, 실습 위주의 훈련 과정입니다. (840시간)
+                
     - 2022.11.25 ADSP 자격증 취득 (한국데이터산업진흥원 ADsP-035002472)
     - 2023.09.01 정보처리기사 자격증 취득 (한국산업인력공단 23202190101X)
+    - 2023.10.06 빅데이터분석기사 필기 (한국데이터산업진흥원)
 
-        
+
 # 프로젝트
     - 온라인 포트폴리오 웹사이트 (2023 - 현재)
         - 개인 프로젝트로 제작한 온라인 포트폴리오 웹사이트
-        - Spring을 사용하여 프론트엔드 개발
+        - 당담 업무 : Spring을 사용하여 프론트엔드 개발
         - 참고자료 : https://grokeen.github.io
+    
+    - 우편모아 설치
+        - 메타넷 디지털(주)
+        - 당담 업무 : 167개 자치단체 접속. 자치단체 별 파일 전송이 가능하게 우편모아 설치 및 동작 확인.
+
+    - 재산세 세율특례 자동 계산기 개선(2022.08.09 ~ 2022.08.23)
+        - 메타넷 디지털(주)
+        - 당담 업무 : 리스트럭쳐
+
+    - 지방세외수입 실명인증 기능 추가(2022.07.19 ~ 2022.08.09)
+        - 메타넷 디지털(주)
+        - 당담 업무 : 실명인증 기능 추가
+
+    - Spring Framework을 이용한 적성평가 후, 업무역량에 맞는 인사분류 웹 사이트(2021.11.18 ~ 2021.12.10)
+        - 개인
+        - 주요 내용 : 
+
+    - Spring 프레임워크를 이용한 음식점 예약 웹 사이트(2021.08.30 ~ 2021.09.23)
+        - KIC 캠퍼스
+        - 주요 내용 : COVID-19 확산이 우려돼 거리두기 4단계가 시행되던 요즘, 사용자의 간단한 조작만으로 고객이 직접 줄을 서지 않아도 대신 서주는 예약 서비스를 제공해 줍니다.
+
+
+
+# 어학
+    - 2019.10.27 ~ 2020.01.18 필리핀 바기오 어학연수
+
+
+# 참고
+경력기술서 
+    - [KPI 성과지표](https://easytoread.tistory.com/entry/직무별-KPI-예시-주의점)
+    - [면접왕 이형 경력기술서](https://quoo.tistory.com/entry/경력-기술서-작성하는-방법)
+
 
