--- a/_posts/Resume/2023-10-03-한화시스템.md
+++ b/_posts/Resume/2023-10-03-한화시스템.md
@@ -7,6 +7,31 @@ pin: false
 ---
 
 
+15시 까지
 
 [공고](https://www.hanwhain.com/web/apply/notification/view.do?rtSeq=11007)
 [이력서 작성](https://dbgroup.recruiter.co.kr/mrs2/applicant/resume/writeResume)
+
+특이하게 학년 별 학점을 넣어야 한다.
+
+
+
+# 자기소개서
+## 한화시스템에 지원하는 동기에 대하여 구체적으로 작성하시오
+
+
+
+## 지원 직무를 위해 노력했던 준비사항과 직무를 잘 수행 할 수 있는 본인의 전공/직무 경험, 역량 등에 대하여 구체적으로 작성하시오
+
+
+## 자신의 보편적인 가치관에 따라 일관되게 행동하고, 이를 지키기 어려운 상황에서도 그것을 지키고자 했던 사례에 대하여 구체적으로 작성하시오
+
+
+
+## 목표를 달성하기 위한 의지와 끝까지 노력하는 자세를 가지고, 저항이나 장애에 쉽게 굴복하지 않고 끝까지 최선을 다해서 추진했던 사례에 대하여 구체적으로 작성하시오
+
+
+
+## 팀의 일원으로 다른 팀원들과 협력하여 일하고, 팀의 원활한 운영을 위해 양보하고 협조하여 Win-Win을 이끌어 내었던 사례에 대하여 구체적으로 작성하시오
+
+
