--- a/_posts/Resume/2023-10-03-롯데정보통신.md
+++ b/_posts/Resume/2023-10-03-롯데정보통신.md
@@ -41,18 +41,58 @@ pin: false
 ## 근무지
 서울시 중구
 
+# 경력기술서
+## 담당 업무
+지방세 관련 웹 어플리케이션(UI) 개발 및 유지보수
+## 수행 업무(150자)
+
 
 # 자기소개서
 ## 본인의 지식 및 기술역량을 지원직무 수행 시 어떻게 발휘할 수 있을지 설명해 주세요. (최소 300자, 최대 700자) (*작성방법 : ① 지식 및 기술역량 ② 해당 역량을 어떻게 발휘할 수 있을지에 관한 내용 포함)
+전공 / 정보처리기사 / 국비 교육 / 회사 경험
 
-
+저에게 롯데정보통신 호텔IS팀에 어올리는 2가지 경험이 있습니다.
+첫 번째, 차세대 개발로 팀원의 66%가 공석인 상황에서 무리 없이 대처.
+Spring을 사용하는 공공기관 SI에 근무한 경험이 있습니다. 평소에 SVN을 사용한 프로젝트 소스 코드 관리 및 협업을 진행하였습니다. 차세대 개발로 팀원의 66%가 공석인 상황이 발생하게 되었습니다. 공무원 분들의, 요구사항의 니즈를 파악하여 먼저 Log 데이터나 DB에 값이 제대로 들어 갔는지 확인하고, 문제 발견 시에는 소스코드를 개선하여 해결하였습니다. Spring 로직 개발 경험을 얻을 수 있었으며, 결과적으로 트래픽 대처 및 문제해결능력을 기를 수 있었습니다.
+두 번째, 사물 인터넷 수업에 조교로 참여하여 전년 대비 수업 만족도 12% 증가.
+각종 라이브러리를 활용해 센서의 사용 가능 유무를 직접 코딩 하며 실험해, 동작하는 센서를 구분 하였습니다. 과전류에 따른 브레드 보드 및 센서의 손상 문제에 대해 사전에 방지하였습니다. 마지막으로 뒤쳐진 학생들을 도와 수업 참여 율을 높였습니다. 그리하여 시간은 절약되고, 수업의 질을 높일 수 있었습니다. 결과적으로 기말고사 후 작년 대비 수업 만족도 12% 증가한 것을 확인하였으며, 교수님의 만족도 충족 시킬 수 있었습니다. 니즈를 파악하기 위한 원인 분석을 기를 수 있었습니다.
+이러한 경험으로 호텔IS팀에 기여하고 싶습니다.
 
 ## 프로젝트를 완수하기 위해 노력한 경험을 구체적으로 소개해 주세요. (최소 300자, 최대 700자) (*작성방법 : ① 프로젝트 종류 / 규모 / 본인 역할 및 기여도 / 수행 과정 / 배운 점 포함) ② 직무 관련 과제/대외활동/동아리/인턴경험/개인 프로젝트 등 규모 및 종류에 관계 없이 작성 가능)
 
 
-
+국비지원 교육에서 당시 COVID-19가 진행 중인데도 불가하고, 유명 음식점 앞에 줄서 서 먹는 문화에 대해 거리두기가 필요하다고 인지하여, Spring을 이용한 음식점 예약 플렛폼을 4주간 4명에서 진행한 경험이 있습니다. 제가 맡은 주 임무는 예약 기능을 구현이었습니다.
+학교를 다니면서 수업 도우미로 참여하는 중이었기 때문에 시간이 매우 촉박한 상황이었습니다. 담당했던 예약 기능을 구현 하면서, 완성도를 높이기 위해 Google Map API를 활용하였습니다. 소비자가 보다 직관적으로 음식점의 위치까지 확인할 수 있게 구현 하였으며, 예약 시, Ajax를 활용하여 음식점 주인에게 예약 메세지가 실시간 비동기 전송이 가능하게 개발하였습니다.
+그러나 프로젝트 시작 당시 발표를 위해 프로토타입을 설계한 사람이 저였기 때문에, 결과적으로 기능 연결하는 부분도 소스코드에 이해가 높은 제가 맡게 되었습니다. 발표 직전까지 프로젝트를 진행하였고, 프로젝트에 대한 책임감과 리더십을 기르며, 성공적으로 프로젝트를 마무리 할 수 있었습니다.
 
 ## 본인 삶의 가치관 한 가지를 소개하고, 이를 회사에서 실현할 수 있는 방법을 작성해 주세요. (최소 300자, 최대 700자) (*작성방법 : ① 본인의 가치관 ② 회사에서의 가치관 실현 방법 포함)
+도전/열정/협력
+정보처리기사/
+
+chmod -R 751 김용록
+
+저의 가치관은 특이하게 리눅스 명령어인 chmod -R 751 입니다. 파일 소유자는 "읽고/쓰고/실행" 모든 권한을 가지고 있고, 그룹은 "읽고/실행"을 할 수 있으며, 그 밖에 사용자는 그저 볼 수 만 있습니다.
+여기서 제가 말하는 파일 소유자는 저 자신이고, 그룹은 가족이나 학교,회사입니다.
+컴퓨터 서버처럼 누구도 제 안에 들어 올 수 없습니다. 파일를 수정할 수 있는 건 결국 자신 뿐이라고 생각합니다.
+인생도 마찬가지로 자기 생각을 실천으로 옮기는 것은 어렵기 때문에, 그것을 개발하려는 노력이 없다면 작은 것 하나 바꿀 수 없습니다. 그래서 실천하고, 도전하며 행동하는 것이 다양한 경험을 얻을 수 있어 가장 중요하다고 생학합니다.
+행동하는 사람이 성공할 기회를 가질 수 있습니다. 롯데정보통신에서 새로운 사람들과 협력하며, 경험을 통해 새로운 저를 만들어 갈 수 있는 안생에 몇 없는 좋은 기회라고 생각합니다.
+
+
+<!-- 
+chmod -R 751 김용록
+
+저의 가치관은 리눅스 명령어인 chmod에 빛 대어 표현할 수 있습니다. 파일 소유자는 "읽고/쓰고/실행" 모든 권한을 가지고 있고, 그룹은 "읽고/실행"을 할 수 있으며, 그 밖에 사용자는 그저 볼 수 만 있습니다.
+여기서 제가 말하는 파일 소유자는 저 자신이고, 그룹은 회사입니다. 
+
+파일에 쓸 수 있는 결국 자신압니다. 
+
+공공기관 SI에 근무하던 당시, 일이 적다고 느꼈습니다. 조금 더 일이 많을 거 같은 회사에 도전하고자
+
+롯데정보통신에서 개발자로 끝까지 노력하겠습다
+ -->
+
+
+
 
 # 참고
 롯데정보통신 후기
