--- a/_posts/Resume/2022-12-26-resume.md
+++ b/_posts/Resume/2022-12-26-resume.md
@@ -17,32 +17,50 @@ categories: resume
 
 # 경력
     - 프론트엔드 개발자 
-        - 2022.03 ~ 2023.03 메타넷 디지털(주) 위택스 개발팀
-            - 당담 업무 :
+        - 2022.03.17 ~ 2023.03.17 메타넷 디지털(주) 위택스 개발팀
+            - 당담 업무
                 지방세(지역자원시설세,자동차세(주행분),지방세외수입) 관련 웹 어플리케이션(UI) 개발 및 유지보수
-            - Spring을 활용한 컴포넌트 기반 개발
-            - HTML, CSS, JavaScript를 사용하여 사용자 경험 향상 및 웹 성능 최적화
-            - SVN을 사용한 소스 코드 관리 및 협업
-            - 경력 기술서(업무 성과)
+
+            - 수행 업무
+                - Spring을 활용한 컴포넌트 기반 개발
+                - HTML, CSS, JavaScript를 사용하여 사용자 경험 향상 및 웹 성능 최적화
+                - SVN을 사용한 소스 코드 관리 및 협업
+                    위택스 개발팀에서 Spring을 활용한 컴포넌트 기반 프론트엔드와 백엔드 개발 및 유지보수와 SVN을 사용한 소스 코드 관리 및 협업을 진행하였습니다. 주로 기업이나 자치단체 공무원의 시스템 에러 문의 시, Log나 DB를 확인하고, 소스코드에서 부재의 원인을 찾아 SR을 진행하였습니다.
+
+            - 업무 성과
                 핵심 성과 : 차세대 개발로 팀원의 66%가 공석인 상황에서 무리 없이 대처.
                 역할 : 지역자원시설세,지방세외수입,레저세,자동차세(주행분),담배소비세 등 개발 및 유지보수
                 획득역량 : Spring 로직 개발 경험.
                 적용 포인트 : 트래픽 대처 및 문제해결능력
-            - 프로젝트 : 재산세(세율특례) 자동 계산기 설계, 지역자원시설세 실명인증 추가 등
-            - 퇴직사유 : 계약만료, 당시 근무했던 회사도 좋았지만, 공공기관 SI가 업무적으로 부족하다 느껴, 더 경험을 얻고자 나오게 되었습니다.
+
+            - 프로젝트 : 
+                - 지방세미리계산 자동차세(소유) UI 개편
+                - 지방세미리계산 재산세(세율특례) 계산식 기능 개편
+                - 지방세외수입 실명인증 기능 개발
+                - 시가표준액 조회 UI 개편
+                - 상세신고특별징수 가감 조정금액 표기 UI 개편
+                - 23년 법개정에 따른 주민세 사업소본 가산세 특례(면제) 기능 개편    
+                - 레저세 안내 메세지 기능 개발
+                - 우편모아 각 자치단체 설치 및 연동, 한국지역정보개발원 지원
+                - 차세대 프로젝트 QA
+            
+            - 퇴직사유 : 계약만료, 당시 근무했던 회사도 좋았지만, 공공기관 SI가 업무적으로 부족하다 느껴, 더 많은 경험을 얻고자 나오게 되었습니다.
 
 
 # 학력
     - 2013.03.04 ~ 2016.02.03 동안고등학교
         - 입문계
 
-    - 2016.02.29 ~ 2022.02.18 한국산업기술대학교 컴퓨터융합학과
+    - 2016.03.02 ~ 2022.02.18 한국공학대학교(한국산업기술대학교) 컴퓨터융합학과
         - 졸업 프로젝트 : 라즈베리파이를 이용한 운동자세 교정 스마트미러
+            라즈베리파이
+
         - 학점 : 3.52 / 132학점
             전공 학점 : 3.64 / 72학점
             학년 별 학점 : 3.33/3.42 3.33/3.25 3.7/3.67 3.7/4
             수강 과목(자바기초,자바응용 4.5/4.5)
-        - 계열 : 공학 계열
+
+        - 계열 : 공학 계열/공학사
         - 단과대 : 기업인재대학
         
 
@@ -61,12 +79,12 @@ categories: resume
         - 2020.10.20 ~ 2020.12.15 IOT-인공지능-빅데이터 수업 도우미
         - 2021.09.28 ~ 2021.12.08 프로그래밍 기초(파이썬) 비교과 수업 도우미
         - 2021.11.02 ~ 2021.12.21 사물인터넷을 품은 미래사회 수업 도우미
-        사물 인터넷 수업에 조교로 참여하여 라즈베리파이 분석을 통해 전년 대비 수업 만족도 12% 증가. 
-        학교에서 강의 영상 편집을 하던 중 한 교수님을 만나 실습 수업 진행 시 많은 학생들을 혼자 보지 못하여 도우미를 구하시고 있다는 소식을 접했습니다. 졸업작품에 관한 라즈베리파이의 이해와 학생들이 원활하게 수업 진행하면서 교수님의 졸업작품에 대한 도움을 얻기 위해 도우미로 참여하였습니다. 우선 학생들이 원하는 수업 방식을 가벼운 대화를 통해 니즈를 파악하였습니다. 학생 별로 ` 진도가 빠르다. ` 혹은 ` 느리다. ` 라며, 수업의 진도에 대한 불만이 많았습니다. 
-        라즈베리파이의 GPIO를 실습하다 보면 많은 하드웨어(물리)적 문제가 발생합니다. 첫 번째로 ` 라즈베리파이4 정석 `, 책을 이용하여 센서에 대한 정보를 탐색하였습니다. 두 번째, 구글링을 통하여 센서의 사용 가능 유무를 직접 코딩하며 실험해, 동작하는 센서를 구분하였습니다. 과전류에 따른 브레드 보드 및 센서의 손상 문제에 대해 사전에 방지하였습니다. 마지막으로 진도 문제를 해결하기 위해 뒤처진 학생들을 맡았으며, 학생들의 수업 참여율을 높였습니다. 그리하여 시간은 절약되고, 수업의 질을 높일 수 있었습니다. 결과적으로 기말고사 후 작년 대비 수업 만족도 12% 증가한 것을 확인하였으며, 교수님의 만족도 충족시킬 수 있었습니다.
+            사물 인터넷 수업에 조교로 참여하여 라즈베리파이 분석을 통해 전년 대비 수업 만족도 12% 증가. 
+            학교에서 강의 영상 편집을 하던 중 한 교수님을 만나 실습 수업 진행 시 많은 학생들을 혼자 보지 못하여 도우미를 구하시고 있다는 소식을 접했습니다. 졸업작품에 관한 라즈베리파이의 이해와 학생들이 원활하게 수업 진행하면서 교수님의 졸업작품에 대한 도움을 얻기 위해 도우미로 참여하였습니다. 우선 학생들이 원하는 수업 방식을 가벼운 대화를 통해 니즈를 파악하였습니다. 학생 별로 ` 진도가 빠르다. ` 혹은 ` 느리다. ` 라며, 수업의 진도에 대한 불만이 많았습니다. 
+            라즈베리파이의 GPIO를 실습하다 보면 많은 하드웨어(물리)적 문제가 발생합니다. 첫 번째로 ` 라즈베리파이4 정석 `, 책을 이용하여 센서에 대한 정보를 탐색하였습니다. 두 번째, 구글링을 통하여 센서의 사용 가능 유무를 직접 코딩하며 실험해, 동작하는 센서를 구분하였습니다. 과전류에 따른 브레드 보드 및 센서의 손상 문제에 대해 사전에 방지하였습니다. 마지막으로 진도 문제를 해결하기 위해 뒤처진 학생들을 맡았으며, 학생들의 수업 참여율을 높였습니다. 그리하여 시간은 절약되고, 수업의 질을 높일 수 있었습니다. 결과적으로 기말고사 후 작년 대비 수업 만족도 12% 증가한 것을 확인하였으며, 교수님의 만족도 충족시킬 수 있었습니다.
 
     - 2021.06.14 ~ 2021.11.18 KIC 캠퍼스, 실무 프로젝트 기반 빅데이터 플랫폼 개발 및 분석 전문가 양성 과정 교육 이수
-        빅데이터 플랫폼 기반 자바&파이썬 개발자 양성과정으로, 웹 프로그래밍(java,jsp,spring)부터 시작하여, 머신러닝(python), 딥러닝(tensorflow)까지 전반적인 개발 환경을 습득하고, 현업기업 실무자 멘토링을 통한 프로젝트 중심으로, 실습 위주의 훈련 과정입니다. (840시간)
+            빅데이터 플랫폼 기반 자바&파이썬 개발자 양성과정으로, 웹 프로그래밍(java,jsp,spring)부터 시작하여, 머신러닝(python), 딥러닝(tensorflow)까지 전반적인 개발 환경을 습득하고, 현업기업 실무자 멘토링을 통한 프로젝트 중심으로, 실습 위주의 훈련 과정입니다. (840시간)
                 
     - 2022.11.25 ADSP 자격증 취득 (한국데이터산업진흥원 ADsP-035002472)
     - 2023.09.01 정보처리기사 자격증 취득 (한국산업인력공단 23202190101X)
@@ -74,35 +92,45 @@ categories: resume
 
 
 # 프로젝트
-    - 온라인 포트폴리오 웹사이트 (2023 - 현재)
+## 온라인 포트폴리오 웹사이트 (2023 - 현재)
         - 개인 프로젝트로 제작한 온라인 포트폴리오 웹사이트
-        - 당담 업무 : Spring을 사용하여 프론트엔드 개발
+        - 담당 업무 : Spring을 사용하여 프론트엔드 개발
         - 참고자료 : https://grokeen.github.io
-    
-    - 우편모아 설치
+
+## 재산세 세율특례 자동 계산기 개선(2022.08.09 ~ 2022.08.23)
         - 메타넷 디지털(주)
-        - 당담 업무 : 167개 자치단체 접속. 자치단체 별 파일 전송이 가능하게 우편모아 설치 및 동작 확인.
+        - 주요 내용 : 다른 SR을 진행하는 중 재산세(세율특례)에 관련하여 개발원에서 제공된 엑셀과 값이 다르다는 것을 찾아 보고하였습니다. 행안부에서 검토하니, 작년에 행안부가 제공한 엑셀 계산식은
+        전년도(표준세율) -> 현년도(특례세율) 적용 시, 계산되는 식으로 계산식에는 문제가 없고,
+        전년도(특례세율) -> 현년도(특례세율) 적용되었을 때도 계산될 수 있도록 해야 한다는 요청이 왔습니다. Javascript와 JQuery를 이용하여 전년도에 (표준세율/특례세율)를 선택할 수 있는 UI 개선과 추가 계산식이 적용된 계산 기능을 개발하였습니다.
+        - 담당 업무 : 재산세(세율특례) 계산식 개선
 
-    - 재산세 세율특례 자동 계산기 개선(2022.08.09 ~ 2022.08.23)
+## 지방세외수입 실명인증 기능 개발(2022.07.19 ~ 2022.08.09)
         - 메타넷 디지털(주)
-        - 당담 업무 : 리스트럭쳐
+        - 주요 내용 : 지방세외수입 항목인 건설업등록수수료와 총포수수료에는 비회원 신고 시 실명인증 없이 주민번호 만 입력하면 신고가 가능하게 되어 있었다. 사용자가 페이지에 입력한 주민번호로 시민 정보를 가지고 있는 API를 연계하여, 실명인증 기능을 개발하였습니다. 
+        - 담당 업무 : 지방세외수입에 실명인증 기능 개발
 
-    - 지방세외수입 실명인증 기능 추가(2022.07.19 ~ 2022.08.09)
-        - 메타넷 디지털(주)
-        - 당담 업무 : 실명인증 기능 추가
+## Spring Framework을 이용한 적성평가 후, 업무역량에 맞는 인사분류 웹 사이트(2021.11.18 ~ 2021.12.10)
+        - 한국공학대학교(한국산업기술대학교)
+        - 주요 내용 : 신입 사원 중 조기 퇴사자가 기업측에 밝힌 퇴사 사유는 1위 ‘적성과 안 맞는 직무’ 가 59.2%(복수응답)로 가장 많았으며, 2위로 ‘대인관계 등 조직 부적응(26.4%)’ , ‘담당 업무 불만족(23.2%)’이 그 다음을 차지하였고, 사전에 방지하고자 Spring을 활용한 인사 분류 웹 사이트를 개발하였습니다. 프로젝트에서 UI를 맡았으며, 각 기능에서 막히는 부분을 도우며, 서브적인 역할로 전반적인 Spring 로직에 대한 이해를 높일 수 있었습니다. DB 설계 같은 경우, 시간이 촉박하여 기획을 안하고 프로젝트를 먼저 진행하다 보니, 다 개발된 후에 DB 설계에서 결함을 발견했고, 단 기간에 프로젝트를 책임지고 리팩토링 했던 경험이 있습니다.
+        - 담당 업무 : MVC 패턴 View,DB 설계,프로젝트의 전반적인 서포터
 
-    - Spring Framework을 이용한 적성평가 후, 업무역량에 맞는 인사분류 웹 사이트(2021.11.18 ~ 2021.12.10)
-        - 개인
-        - 주요 내용 : 
-
-    - Spring 프레임워크를 이용한 음식점 예약 웹 사이트(2021.08.30 ~ 2021.09.23)
+## Spring 프레임워크를 이용한 음식점 예약 웹 사이트(2021.08.30 ~ 2021.09.23)
         - KIC 캠퍼스
-        - 주요 내용 : COVID-19 확산이 우려돼 거리두기 4단계가 시행되던 요즘, 사용자의 간단한 조작만으로 고객이 직접 줄을 서지 않아도 대신 서주는 예약 서비스를 제공해 줍니다.
+        - 주요 내용 : COVID-19 확산이 우려돼 거리두기 4단계가 시행 되던 당시, 사용자의 간단한 조작만으로 고객이 직접 줄을 서지 않아도 대신 서주는 일종의 예약 서비스를 Spring을 활용하여 구현하였습니다. 담당했던 예약 기능을 구현 하면서 완성도를 높이기 위해 Google Map API를 활용하여, 소비자가 보다 직관적으로 음식점의 위치까지 확인할 수 있게 구현 하였으며, 예약 시, Ajax를 활용하여 음식점 주인에게 예약 메세지가 실시간 비동기 전송이 가능하게 개발하였습니다.
+        - 담당 업무 : 프론트엔드,Google Map API 활용한 음식점 정보 도출,예약 기능 구현,기능 연결
 
 
 
 # 어학
     - 2019.10.27 ~ 2020.01.18 필리핀 바기오 어학연수
+
+
+# 취미/특기 그리고 가치관
+    - 취미 : 
+    - 특기 : 
+    - 가치관 :
+
+
 
 
 # 참고
