--- a/_posts/Resume/2022-03-17-경력기술서.md
+++ b/_posts/Resume/2022-03-17-경력기술서.md
@@ -7,8 +7,9 @@ pin: false
 ---
 
 
-
-
+# 메타넷 디지털 정보
+## 직원수
+[536명](https://www.saramin.co.kr/zf_user/company-info/view/csn/Rk03SldzMnhoTUhVazBKa0NtV0pPQT09/company_nm/메타넷디지털(주))
 
 # 프론트엔드 개발자 
     - 2022.03 ~ 2023.03 메타넷 디지털(주) 위택스 개발팀
@@ -18,7 +19,7 @@ pin: false
         - SVN을 사용한 소스 코드 관리 및 협업
             
 
-# 경력 기술서(재산세 세율특례/지역자원시설세 실명인증)
+## 경력 기술서(재산세 세율특례/지역자원시설세 실명인증)
 위택스에는 지방세 미리 계산이라는 페이지가 있는데 재산세(세율특례)의 계산이 잘 못된 부분을 찾아 건의 드려 개선한 경험이 있습니다.
 
 재산세 같은 경우 전년도에 납부 세액을 100% 내면 이번 해에 특례로 일정 세금 면제가 됩니다.
@@ -33,14 +34,14 @@ pin: false
 
 
 
-# 리눅스 환경 원격 세팅 경험(우편 모아)
+## 리눅스 환경 원격 세팅 경험(우편 모아)
 이제 위택스 차세대를 진행하면서, 우편 모아라고 자치단체 마다 파일 전송할 수 있는 프로그램을 리눅스에 설치해야 했습니다.
 일주일 동안 하는 작업ㅈ에 직접 자원해서, 163개?의 자치단체 서버 마다 직접 접속해서 환경변수 설정 후 우편 모아를 설치했던 기억이 있습니다.
 Telnet이나 SSH를 이용했으며, 개발원에서 리눅스를 잘 다룬다고, 과장님인 줄 알았다고, 과장님이라 부르셨던 기억이 있습니다.
 
 
 
-# DB 및 사람 상대한 경험(공무원의 연락,담배소비세)
+## DB 및 사람 상대한 경험(공무원의 연락,담배소비세)
 행안부 소속 한국지역정보개발원
 형식상 절차는
     민원 -> 자치단체 공무원 -> 행안부 -> 한국지역정보개발원 -> 회사 콜팀 -> 운영팀 -> 개발팀
