--- a/_posts/Resume/2022-12-26-resume.md
+++ b/_posts/Resume/2022-12-26-resume.md
@@ -18,6 +18,9 @@ categories: resume
 # 경력
     - 프론트엔드 개발자 
         - 2022.03.17 ~ 2023.03.17 메타넷 디지털(주) 위택스 개발팀
+            - 회사 정보
+                직원 수 : 536명
+                
             - 당담 업무
                 지방세(지역자원시설세,자동차세(주행분),지방세외수입) 관련 웹 어플리케이션(UI) 개발 및 유지보수
 
@@ -107,7 +110,7 @@ categories: resume
 ## 지방세외수입 실명인증 기능 개발(2022.07.19 ~ 2022.08.09)
         - 메타넷 디지털(주)
         - 주요 내용 : 지방세외수입 항목인 건설업등록수수료와 총포수수료에는 비회원 신고 시, 실명인증 없이 주민번호 만 입력하면 신고가 가능하게 되어 있었습니다. 사용자가 페이지에 입력한 주민번호로 행안부의 시민 정보를 가지고 있는 API와 연계하여, DB Table에서 가져오는 방식이 아닌 XML에 쿼리를 작성해서 ESB을 활용해서 Massage Bus로 보내는 방식이었습니다. 그 이후에는 Drill Down 방식으로 실명인증 기능을 개발을 진행하였습니다. 이러한 경험으로 개인 프로젝트에서는 배울 수 없었던 대규모 시스템 설계 방식에 대한 이해를 높일 수 있었습니다.
-        - 담당 업무 : 지방세외수입에 실명인증 기능 개발
+        - 담당 업무 : 지방세외수입 실명인증 기능 개발
 
 ## Spring Framework을 이용한 적성평가 후, 업무역량에 맞는 인사분류 웹 사이트(2021.11.18 ~ 2021.12.10)
         - 한국공학대학교(한국산업기술대학교)
