--- a/_posts/JAVA/CodingTestWithJava/2022-08-12-ifhash.md
+++ b/_posts/JAVA/CodingTestWithJava/2022-08-12-ifhash.md
@@ -1,6 +1,6 @@
 ---
 layout: content
-title:  "[Java] 코딩테스트 준비 1일차"
+title:  "[Java] 코딩테스트 문제 풀어보기 1일차"
 date:   2022-08-12 12:45:29 +0900
 categories: Java
 pin: true
