--- a/_posts/Resume/2023-09-21-23년지원기업피드백.md
+++ b/_posts/Resume/2023-09-21-23년지원기업피드백.md
@@ -15,14 +15,31 @@ pin: false
 |2|2023 09 17| [SK 머터리얼즈]()|대| |❌ 서류 탈락|서류 제출 후 3일 만에 연락이 왔다. 이건 자기소개서 보다는 이력 문제인 듯 싶다. 부족한 부분은 아마도 영어 성적이나 학교가 문제 였겠지.|더 열심히 하자|
 |3|2023 09 18| [삼성 SDS]()|대||❌ 미지원|영어성적|Opic 준비가 필요해 보인다.|
 |4|2023 09 19| [LG CNS]()|대|DX Engineer SI/SM |❌ 서류 탈락|||
-|5|2023 09 19| [라마](https://www.jobkorea.co.kr/Recruit/GI_Read/42661062?Oem_Code=C1)|스타트업| 데이터 엔지니어||||
+|5|2023 09 19| [라마](https://www.jobkorea.co.kr/Recruit/GI_Read/42661062?Oem_Code=C1)|스타트업| 데이터 엔지니어|서류제출|||
 |6|2023 09 19| [포스코 DX]()|대| |❌ 미지원|영어성적|Opic 준비가 필요해 보인다.|
-|7|2023 09 21| [천재교육](https://www.jobkorea.co.kr/Recruit/GI_Read/42685332?Oem_Code=C1&logpath=1&stext=자바&listno=13)|중견| Java 웹 개발자||||
-|8|2023 09 27| [아프리카tv](https://www.jobkorea.co.kr/Recruit/GI_Read/42868987?Oem_Code=C1)|중견기업| Nood.js 웹 개발자||||
-|9|2023 10 31| [플레닛헬스캐어](https://www.jobkorea.co.kr/Recruit/GI_Read/42863489?Oem_Code=C1)|중소| 데이터 엔지니어||||
-|10|2023 10 03|[CJ올리브네트웍스](https://recruit.cj.net/recruit/ko/recruit/recruit/detail.fo?zz_jo_num=7647)|대|||||
-|11|2023 10 03|[롯데정보통신](https://recruit.lotte.co.kr/apply/announcement/detail/21115485?compcd=?id=bookmark1000)|대|||||
-|12|2023 10 03|[한화시스템]()|대||❌ 미지원||일정 관리 부족|
+|7|2023 09 21| [천재교육](https://www.jobkorea.co.kr/Recruit/GI_Read/42685332?Oem_Code=C1&logpath=1&stext=자바&listno=13)|중견| Java 웹 개발자|서류제출|||
+|8|2023 09 27| [아프리카tv](https://www.jobkorea.co.kr/Recruit/GI_Read/42868987?Oem_Code=C1) |중견| Nood.js 웹 개발자|서류제출|||
+|9|2023 10 31| [플레닛헬스캐어](https://www.jobkorea.co.kr/Recruit/GI_Read/42863489?Oem_Code=C1)|중소| 데이터 엔지니어|세류제출|||
+|10|2023 10 03|[CJ올리브네트웍스](https://recruit.cj.net/recruit/ko/recruit/recruit/detail.fo?zz_jo_num=7647)|대|Java 개발자|서류제출|||
+|11|2023 10 03|[롯데정보통신](https://recruit.lotte.co.kr/apply/announcement/detail/21115485?compcd=?id=bookmark1000)|대| Java 개발자|서류제출|||
+|12|2023 10 03|[한화시스템](https://www.hanwhain.com/web/apply/notification/view.do?rtSeq=11007)|대||❌ 미지원||일정 관리 부족|
+|13|2023 10 06|[DB금융투자](https://dbgroup.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=155109)|대|JAVA 개발|서류제출|||
+|14|2023 10 09|[NICE 그룹](https://nice.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=158255)|대|신입 Java 개발|서류제출|||
+|15|2023 10 10| [KT DS](https://recruit.kt.com/careers/157809) | 대 | 엔지니어 개발자| ❌ 미지원 | | 하 시발 다 썼는데 몇 자 쓰라는 ㅈ같은 거 때문에 계속 수정하고 읽고 수정하고 읽고 제출이 정각인 줄 알고 딱 59분 되자마자 제출 눌렀는데 마감 떴네 ㅈ같게. 일부러 시간 맞춰서 밥 먹고 쉬다가 컨디션 회복하고 다시 수정했는데 750~800자 이게 생각보다 아주 ㅈ같네 |
+|16|2023 10 17| [넥슨](https://career.nexon.com/user/recruit/member/postDetail?joinCorp=NX&reNo=20230255) | 대 | 기술본부 | 서류제출 |||
+|17|2023 10 17| [수협은행](https://shbank.incruit.com/hire/viewhire.asp?projectid=104) | 대 | IT 서비스 개발운영 | 서류제출 |||
+|18 | 2023 10 28 | [에ㅁ클라우드브리지(주)](https://www.jobkorea.co.kr/Recruit/GI_Read/42860442?Oem_Code=C1&logpath=1&stext=BI&listno=1) | 중소 | BI 개발자 | 서류제출 |||
+|19|2023 11 07 | [(주)데이타솔루션](https://www.jobkorea.co.kr/Recruit/GI_Read/42829254?Oem_Code=C1&logpath=1&stext=BI&listno=5) |중견| 클라우드 아키텍트 |서류제출|||
+|20| 2023 11 17  | [메가존클라우드](https://xmukacmt.ninehire.site/job_posting/Z0bpi6pd?lang=en) | 외국계 |솔루션 아키텍트 게이밍||||
+|||  ||||||
 
-|13|2023 10 06|[DB금융투자]()|대|||||
-|14|2023 10 09|[NICE 그룹](https://nice.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=158255)|대|신입 Java 개발||||
+# 지원 기업 분석
+
+
+|  규모 | 지원 개수 |서류 합격| 코테 합격 | 면접 합격 | 최종합격|
+|:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|
+| 대 | 12 | 0 ||||
+| 중견 | 3 | 0 |||||
+| 중소 | 3 | 1 ||| 0 ||
+| 벤처/스타트업 | 1 | 0 |||||
+| 외국계 |0||||||
