--- a/_posts/Resume/2023-09-21-23년지원기업피드백.md
+++ b/_posts/Resume/2023-09-21-23년지원기업피드백.md
@@ -30,28 +30,36 @@ pin: false
 |17|2023 10 17| [수협은행](https://shbank.incruit.com/hire/viewhire.asp?projectid=104) | 대 | IT 서비스 개발운영 | ❌ 미치원 |아버지랑 여행||
 |18 | 2023 10 28 | [엠클라우드브리지(주)](https://www.jobkorea.co.kr/Recruit/GI_Read/42860442?Oem_Code=C1&logpath=1&stext=BI&listno=1) | 스타트업 | BI 개발자 | 면접 |||
 |19|2023 11 07 | [(주)데이타솔루션](https://www.jobkorea.co.kr/Recruit/GI_Read/42829254?Oem_Code=C1&logpath=1&stext=BI&listno=5) |중견| 클라우드 아키텍트 |서류제출|||
-
-|20| 2023 11 17  | [메가존클라우드](https://xmukacmt.ninehire.site/job_posting/Z0bpi6pd?lang=en) | 외국계 |솔루션 아키텍트 게이밍||||
-
+||| ||||||
 |21|2023 11 10 |[NEZOT㈜](https://www.jobkorea.co.kr/Recruit/GI_Read/43088314?Oem_Code=C1)  |외국계|웹개발자|서류제출|||
 |22|2023 10 22|[파수](https://recruit.fasoo.com/apply/233)|중견|백엔드|서류제출|||
 
-|23|2023 11 |[JYP엔터테이먼트](https://recruit.jype.com/Recruit/Detail?Seq=707&Page=3&PageSize=12&RcTP=0&TempSaveST=False&ExpST=13&CampusST=0&State=0&SuppUseYN=False)  |대|백엔드 Django||||
-||| [SBI저축은행](https://sbisb.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=153818) ||금융IT||||
+|20| 2023 11 17  | [메가존클라우드](https://xmukacmt.ninehire.site/job_posting/Z0bpi6pd?lang=en) | 외국계 |솔루션 아키텍트 게이밍||||
+|23|2023 11 05|[JYP엔터테이먼트](https://recruit.jype.com/Recruit/Detail?Seq=707&Page=3&PageSize=12&RcTP=0&TempSaveST=False&ExpST=13&CampusST=0&State=0&SuppUseYN=False)  |대|백엔드 Django||||
+|24|2023 11 01| [SBI저축은행](https://sbisb.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=153818) ||금융IT||||
+
+|25|2023 11 09|[(주)코비젼](https://www.jobkorea.co.kr/Recruit/GI_Read/43040731)  |벤처| JAVA 경력직 |서류제출|||
+|26|2023 10 24|[KTR과천](https://www.jobkorea.co.kr/User/PositionOffer/View?idx=55020315&mem_Type_Code=C&reload=n)  | 공 | ERP 경력 계약직 | 웹 | ❌ 미지원 | 작년과 비슷할까봐 | 연락이 그 쪽에서 왔는데 연봉 4천 정도였다. 알바 삼아 넣으려다가 말았다.|
+
 |||  ||||||
-|||  ||||||
-|||  ||||||
+||| ||||||
+
+||| ||||||
+||| ||||||
+||| ||||||
+
 
 |No.|  날짜  | 기업 |규모| 직무 | 현황 | 탈락 분석 | 실행 계획|
 
 # 지원 기업 분석
 
 
-|  규모 | 지원 개수 |서류 합격| 코테 합격 | 면접 합격 | 최종합격|
-|:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|
-| 대 | 12 | 0 ||||
-| 중견 | 3 | 0 |||||
-| 중소 | 2 | 1 ||| 0 ||
-| 벤처/스타트업 | 2 | 1 |||||
-| 외국계 |2||||||
-
+|  규모 | 지원 개수 | 미지원 |서류 합격| 코테 합격 | 면접 합격 | 최종합격|
+|:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|
+| 대 | 12 | 6 |0 ||||
+| 중견 | 3 | 0|0 |||||
+| 중소 | 2 | 0|1 ||| 0 ||
+| 벤처/스타트업 | 3 |0| 2 |1||||
+| 외국계 |2|0||||||
+| 공 |1|1||||||
+| **총합** |26| 1 ||||||
