--- a/_posts/Resume/2023-10-20-엠클라우드브릿지.md
+++ b/_posts/Resume/2023-10-20-엠클라우드브릿지.md
@@ -44,6 +44,12 @@ SI나 시스템 로직 설계냐? 아니면 고객응대 느낌이냐?
 
 ### 6. 데이터 경험과 지난 회사 경험에 엮어서 말해봐라
 
+### 7. BI 툴 아는 거 있냐?
+테블로랑 MSA였나?
+MSA는 아니고, ~~BI 라고 있다.
+
+### 8. 성격의 장단점?
+
 
 
 ## 추가로 궁금한 점
@@ -51,4 +57,6 @@ SI나 시스템 로직 설계냐? 아니면 고객응대 느낌이냐?
 아 이 추로 궁금한 거 물어 볼 때 마다 할 말이 없다.
 다다음 주 쯤 소식 갈 것
 
-### 2. 혹시 이 
+### 2. 혹시 이게 컨설턴팅이라는게 개발 보다는 고객응대냐?
+
+### 3. 근무는 재택이냐?
