--- a/_posts/Resume/2022-12-26-resume.md
+++ b/_posts/Resume/2022-12-26-resume.md
@@ -19,7 +19,8 @@ categories: resume
     - 프론트엔드 개발자 
         - 2022.03.17 ~ 2023.03.17 메타넷 디지털(주) 위택스 개발팀
             - 회사 정보
-                직원 수 : 536명
+                직원 수 : 536명/1200명
+                메츨액 : 
                 
             - 당담 업무
                 지방세(지역자원시설세,자동차세(주행분),지방세외수입) 관련 웹 어플리케이션(UI) 개발 및 유지보수
