--- a/_posts/Resume/2023-11-01-SBI저축은행.md
+++ b/_posts/Resume/2023-11-01-SBI저축은행.md
@@ -174,3 +174,86 @@ Spring을 사용하는 지방세 관련 공공기관 SI에서 근무할 당시, 
 
 - 직장 선택 기준 아닌 것
 남들의 말, 특히 평생 직장은 없다
+
+
+
+# 1차 면접
+어떻게 붙은 것일까?
+휴,,,,,AI 역량 평가는 그렇게 중요하지 않았나 보다.
+
+## 1분 자깃소개
+안녕하세요 SBI 저축은행에 지원한 개발자 김용록입니다.
+
+
+
+## 예상질문 LIST 만들기 / 자기소개서 내용 자기객관화
+- 자신의 경험 잘 정리
+- 구체적 사례
+- 개인적인 이야기는 부담스럽다 -> 팀플, 극복 , 방향성
+
+### 아버지 관련(금융회사에 입사하고 싶은 이유와 왜 SBI저축은행에 지원하였는지 진솔)
+저는 금융 회사와 관련한 두 가지 인연을 가지고 있습니다.
+첫 번째 인연은 아버지입니다. 어렸을 때부터, 은행에서 근무하시던 아버지 덕분에 종종 방문하여 일하시는 모습 지켜보았습니다. 시간이 지나 성인이 되어 사회에 적응할 때, 비로소 아버지의 대단함을 느꼈습니다. 아버지처럼 되고 싶다고 생각하였고, 작년에 돈을 다룬다는 부분에서 비슷하다고 느꼈던 지방세 관련 업무를 도전하게 되었습니다.
+
+
+### 지난 회사 관련
+두 번째 인연은 앞서 말한 저의 지난 회사입니다. 저는 지방세 관련한 공공기관 SI에서 근무한 경험이 있습니다. 신입으로 들어갔기 때문에 지방세외수입, 레저세, 지역자원시설세 등 주로 법 개정이 적은 항목을 담당하여 개발 및 유지보수를 진행하였습니다.
+당시에 실명 인증 프로세스를 개발했습니다. 사용자가 입력한 주민등록번호로 시민 정보를 가지고 있는 API와 연계하여, DB Table에서 가져오는 방식이 아닌 XML에 쿼리를 작성해서, ESB를 활용하여 Massage Bus로 보내는 방식이었습니다. 이후에는 Drill Down으로 파악하고 실명인증 기능을 개발하였습니다. 이러한 경험으로 시스템의 정보 이동 방식에 대해 알 수 있었습니다.
+
+
+### 왜 그렇게 생각하는지
+지방세 관련하여 일할 수 있었던 것은 금융권에 한 발짝 다가갈 수 있는 경험이었다고 생각합니다. 이러한 좋은 인연을 바탕으로 SBI저축은행에 크게 기여할 수 있다고 생각되어 지원하게 되었습니다.
+
+#### 어떤 점이 그렇게 생각하게 했는지
+
+
+### 프로잭트 시(구체적인 설명)
+국비지원 교육에서 당시 COVID-19가 진행 중인데도 불가하고, 유명 음식점 앞에 줄 서서 먹는 문화에 대해 거리 두기가 필요하다고 인지하여, Spring을 이용한 음식점 예약 플랫폼을 4주간 4명에서 진행한 경험이 있습니다. 제가 맡은 임무는 프론트엔드와 주로 예약 기능을 구현하는 것이었습니다. 담당했던 예약 기능을 구현하였고, 완성도를 높이기 위해 Google Map API를 활용하였습니다. Oracle DB Table에 조사한 음식점의 실제 경도와 위도를 넣어, 소비자가 보다 직관적으로 음식점의 위치까지 확인할 수 있게 구현하였으며, 예약 시, Ajax를 활용하여 음식점 주인에게 예약 메시지가 실시간 비동기 전송이 가능하고, 승인 시, Twilio를 통해 예약 문자가 전송되게 개발하였습니다. 
+그러나 기능을 연결하는 부분에서 문제점이 나타났습니다. 프로젝트 초반에 발표를 위해 외부에서 도입한 CSS 템플릿 소스 코드를 활용하여 HTML로 간단한 프로토타입을 제가 설계하였기 때문에, 프론트엔드에 이해가 높은 제가 맡게 되었습니다. 이 문제를 해결하기 위해 우선 Git을 도입하였습니다. 서로 각자 개발한 파일을 올리고 그 위에 CSS를 적용해, 발표까지 다 같이 책임감을 가지고 프로젝트에 임하였고, 성공적으로 발표하였습니다.
+프로젝트를 마치면서, 협력의 중요성, 특히 Git이나 클린코드처럼 소통의 매개체가 필요하다고 느꼈습니다.
+#### 프로젝트 강점/장점
+
+#### 프로젝트 약점/단점
+
+### 아이디어 관련
+[트렌드는 레트로 그리고 빈티지]
+차세대 개발 지원으로 인해 팀원의 66%가 공석인 상황에서 무리 없이 대처한 경험이 있습니다.
+Spring을 사용하는 지방세 관련 공공기관 SI에서 근무할 당시, 평소에 SVN을 사용한 프로젝트 소스코드 관리 및 협업을 진행하였습니다. 차세대 개발 지원으로 팀원의 66%가 공석인 상황이 발생하게 되었습니다. 우선 공무원분들의 문의 전화가 오기 때문에 각 세목에 필요한 업무 파악하였고, 자주 발생하는 문제나 요구사항의 니즈를 파악하여 먼저 Log 데이터나 DB에 값이 제대로 들어갔는지 확인하고, 문제 발견 시에는 SQL 쿼리를 작성하여 실행 권한이 있는 상급자에게 부탁하거나 소스코드를 개선하여 해결하였습니다.  결과적으로 대규모 Spring 로직에 대해 트래픽 대처와 관련하여 업무 파악의 중요성을 배울 수 있었습니다.
+
+코로나 이후 물가 상승으로 소비 심리가 위축되었다는 기사와 함께 중고 시장이 커졌다는 기사도 쉽게 접할 수 있었습니다. 
+그로인해 트렌드는 재해석과 재탄생입니다.
+
+저는 중고 신입입니다.
+누군가가 저를 가르치는 인력을 줄일 수 있으며, 스스로 소스코드를 분석하고 파악하여, 업무에 보다 빠르게 적응할 자신이 있습니다.
+신입으로서 크게 경쟁력을 강화할 수 있는 혁신적인 아이디어보다는 이렇게 작게나마 소비를 줄일 수 있는 방식이 제 가장 큰 현실적 강점이라고 생각합니다.
+
+#### 아이디어
+저는 앞서 말한 
+
+### 본인의 긍정적인 모습(장점)과 개선이 필요한 모습(단점)에 대해 작성해주세요. 
+
+### 본인이 가장 좋아하고, 잘할 수 있는 기술이나 능력에 대해 작성해주세요. 
+
+
+
+### 본인이 살면서 특정 분야의 전문가가 되기 위해 열정적으로 일했던 경험이나 단체생활을 하며 본인의 강점을 발휘하거나 단점을 극복한 경험에 대해 작성해주세요. 
+
+### 지원한 직무를 선택한 이유, 해당 직무를 위해 어떤 노력을 했는지 작성해주세요. 
+
+
+### 입사하여 하고 싶은 것, 이루고 싶은 것에 대해 작성해주세요. 
+
+### 뽑아야 되는 이유
+
+#### 조직생활 근무 경험(일반 행원 직무 수행?)
+
+#### 실버 세대 IT 기기 및 앱 사용률
+
+
+### 조직 문화에 대해 어떻게 생각하는지
+
+
+[참고1](https://databootcamp.tistory.com/entry/은행-면접-준비-5가지-꿀팁-자기소개-복장-등-완벽정리-Feat-현직자)
+[참고 영상1](https://www.youtube.com/watch?v=NySV0B0OMd4)
+[지피터스에서 올라온 면접봇](https://www.gpters.org/c/univ/gpts)
+
