--- a/_posts/BigData/Python/Project_LCE/2023-08-21-Day5.comback.md
+++ b/_posts/BigData/Python/Project_LCE/2023-08-21-Day5.comback.md
@@ -9,17 +9,10 @@ pin: false
 
 
 
-
-
-
-
-Day5
-===
-
 Spring에 시달리다가 이제야 돌아왔다. 아마 3달 정도 걸렸을 것이다.
 현재 8월 중순이다.
 
-# 깃허브와 로컬 차이 발생
+# 돌아오자마자 뭐지? 깃허브와 로컬 차이 발생
 
 ```
 git fetch origin
