--- a/_posts/BigData/Python/Project_LCE/2023-11-10-Day7.inputval.md
+++ b/_posts/BigData/Python/Project_LCE/2023-11-10-Day7.inputval.md
@@ -7,4 +7,73 @@ pin: false
 ---
 
 
+# 장고에서 값 넣어보기
 Django에서 데이터베이스에 값을 삽입하는 것은 Django의 ORM(Object-Relational Mapping)을 사용하여 진행해야 한다.
+
+## models.py에 정의하기
+
+```python
+class BankUser(models.Model):
+    username = models.CharField(max_length=255)
+    password = models.CharField(max_length=255)
+    email = models.EmailField()
+    full_name = models.CharField(max_length=255)
+    date_of_birth = models.DateField()
+    address = models.TextField()
+    phone_number = models.CharField(max_length=20)
+    created_at = models.DateTimeField(auto_now_add=True)
+    updated_at = models.DateTimeField(auto_now=True)
+
+class BankAccount(models.Model):
+    user = models.ForeignKey('BankUser', on_delete=models.CASCADE)
+    account_number = models.CharField(max_length=20)
+    account_type = models.CharField(max_length=50)
+    balance = models.DecimalField(max_digits=10, decimal_places=2)
+    created_at = models.DateTimeField(auto_now_add=True)
+    updated_at = models.DateTimeField(auto_now=True)
+
+class BankTransaction(models.Model):
+    from_account = models.ForeignKey('BankAccount', related_name='transactions_from', on_delete=models.CASCADE)
+    to_account = models.ForeignKey('BankAccount', related_name='transactions_to', on_delete=models.CASCADE)
+    amount = models.DecimalField(max_digits=10, decimal_places=2)
+    transaction_type = models.CharField(max_length=50)
+    created_at = models.DateTimeField(auto_now_add=True)
+```
+
+
+# 모델에 인스턴스 생성 방법
+모델을 정의한 후, 인스턴스를 생성하고 .save() 메서드를 호출하여 데이터베이스에 저장한다.
+
+```python
+from myapp.models import User  # myapp는 Django 앱의 이름입니다
+
+# 새 사용자 생성
+new_user = User(username='newuser', email='user@example.com')
+new_user.save()
+```
+
+
+# 다음 계획 짜보기
+
+1. 뷰 및 URL 설정
+뷰 생성: banking/views.py 파일에서 필요한 뷰(예: 계좌 조회, 거래 기록, 계좌 이체 등)를 정의합니다.
+URL 연결: banking/urls.py 파일(없으면 생성)에서 URL 경로를 뷰와 연결합니다.
+
+2. 템플릿 생성
+HTML 템플릿 파일을 banking/templates/ 폴더에 생성하여 사용자 인터페이스를 구성합니다.
+
+3. 어드민 인터페이스 설정ㅠ
+Django의 어드민 기능을 사용하여 모델을 관리할 수 있도록 banking/admin.py 파일에서 모델을 등록합니다.
+
+4. 사용자 인터페이스 및 폼
+필요에 따라 forms.py를 생성하여 Django 폼을 사용하거나, 직접 HTML 폼을 구성할 수 있습니다.
+
+5. 보안 및 테스트
+은행 애플리케이션은 높은 보안이 요구되므로, CSRF 보호, 데이터 암호화, 사용자 인증 및 권한 설정에 주의해야 합니다. 또한, 단위 테스트와 통합 테스트를 통해 애플리케이션의 안정성을 확인해야 합니다.
+
+6. 배포
+개발이 완료되면, gunicorn이나 uwsgi와 같은 WSGI 서버를 사용하여 애플리케이션을 배포합니다. 웹 서버(예: Apache, Nginx)와의 통합도 고려해야 합니다.
+
+- 추가 사항
+환경 변수 사용: 중요한 설정(데이터베이스 비밀번호, API 키 등)은 환경 변수를 사용하여 관리합니다.
+로깅 및 모니터링: 시스템 로그와 오류 모니터링을 설정하여 운영 중 문제를 신속하게 파악하고 대응할 수 있도록 합니다.
