--- a/_posts/Resume/2023-09-21-23년지원기업피드백.md
+++ b/_posts/Resume/2023-09-21-23년지원기업피드백.md
@@ -34,38 +34,46 @@ pin: false
 |16|21|2023 10 22|[파수](https://recruit.fasoo.com/apply/233)|중견|백엔드| ❌📤 서류탈락| 영어 성적일까? | 자소서는 어느정도 썼다고 생각한다. 맞춤법 검사는 하지 않았다. 해보니 틀린게 좀 있긴 하더라 고쳤다. |
 |17|22|2023 11 09|[(주)코비젼](https://www.jobkorea.co.kr/Recruit/GI_Read/43040731)  |벤처| JAVA 경력직 | 📤 서류제출|||
 |18|23|2023 10 24|[KTR과천](https://www.jobkorea.co.kr/User/PositionOffer/View?idx=55020315&mem_Type_Code=C&reload=n)  | 공 | ERP 경력 계약직 | ❌👨‍👨‍👦 1차 면접 미응시 | 작년과 비슷할까봐 | 연락이 그 쪽에서 왔는데 연봉 4천 정도였다. 알바 삼아 넣으려다가 말았다.|
-|19|24|2023 11 01| [SBI저축은행](https://sbisb.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=153818) | 외감| 금융IT |  👨‍👨‍👦 1차 면접 |  ||
+|19|24|2023 11 01| [SBI저축은행](https://sbisb.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=153818) | 외감| 금융IT |  ❌👨‍👨‍👦 1차 면접 탈락 | 면접 때, 슈퍼 긴장,,, | 필기는 뒤지게 잘 봤을 거 같은데, 면접 준비를 어떻게 해야할까? 연기학원이라도 다녀야 할까? 업무 분석에 문제가 있었을까? 어디서 티가 난 거지|
 |20|25|2023 11 06| [우리FIS 아카데미](http://woorifisa.com) |대| 클라우드 개발자 교육 | ❌🤦‍♂️ KDT 불가 |||
 |21|26|2023 11 06| [IBK투자증권](https://jrs.jobkorea.co.kr/ibks/ibks23/Agi/Invite)|대| 디지털(DT) | ❌📤 서류탈락 | 이력서 확인 | 아쉬운 스토리텔링 |
-|22|27|2023 11 19 | [YIDO](https://www.jobkorea.co.kr/Recruit/GI_Read/43169916) |중견| IT 사업팀| 📤 서류제출|||
+|22|27|2023 11 19 | [YIDO](https://www.jobkorea.co.kr/Recruit/GI_Read/43169916) |중견| IT 사업팀| ❌📤 서류탈락|||
 |23|28|2023 11 12| [비즈테크아이](https://www.jobkorea.co.kr/Recruit/GI_Read/43065187?Oem_Code=C1) | 대 |JAVA Web| 📤 서류제출|||
-|24|29|2023 11 20| [잡코리아](https://www.jobkorea.co.kr/Recruit/Booth_GI_Read/43220720?Oem_Code=C1&productType=VVIP&logpath=0) |중견|SAP|📤 서류제출|||
+|24|29|2023 11 20| [잡코리아](https://www.jobkorea.co.kr/Recruit/Booth_GI_Read/43220720?Oem_Code=C1&productType=VVIP&logpath=0) |중견|SAP|❌📤 서류탈락|||
 |25|30|2023 11 03| [한국IT진흥](https://www.jobkorea.co.kr/Recruit/Booth_GI_Read/43113693?Oem_Code=C1&productType=TopClass&logpath=0) |중소| NS사업본부 IT보안 | ❌👨‍👨‍👦 1차 면접 미응시 | 보안 아에 몰라서 ||
 |26|31|2023 11 05| [OK금융그룹](https://ok.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=160163) | 대 | IT개발 | ❌📤 서류탈락 |||
 |27|32|2023 11 05|[JYP엔터테이먼트](https://recruit.jype.com/Recruit/Detail?Seq=707&Page=3&PageSize=12&RcTP=0&TempSaveST=False&ExpST=13&CampusST=0&State=0&SuppUseYN=False)  | 대 |백엔드 Django| 📤 서류제출 |||
 |-|33|2023 11 05| [아이디스](https://recruit.idis.co.kr:1007/_service/idis/apply_site/apply/recruit_default.asp) ||| ❌ 미지원 |||
 |-|34|2023 11 05| [자이C&A](https://xicna.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=160126) |||❌ 미지원 |||
-|28|35|2023 11 06 |[펜타시스템테크놀로지](https://www.jobkorea.co.kr/Recruit/GI_Read/43126987?Oem_Code=C1&sc=67)|중소|데이터엔지니어|📤 서류제출||
+|28|35|2023 11 06 |[펜타시스템테크놀로지](https://www.jobkorea.co.kr/Recruit/GI_Read/43126987?Oem_Code=C1&sc=67)|중소|데이터엔지니어|❌📤 서류탈락||
 |-|36|2023 11 06| [인천공항시설관리](https://airportfc.scout.co.kr/jobinfo/jobinfo_view.asp?ID=1022) |||❌ 미지원|||
 |29|37|2023 11 06| [아시아나IDT](https://asianaidt.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=160928) | 대 |JAVA 경력직 3년| ❌🦾 AI역량검사 미응시 | 전에 본 것에 대한 트라우마 ||
-|30|38|2023 11 06| [경동나비엔](https://recruit.kdfamily.co.kr/info/recruit-detail.do?idx=1110)|대|SAP,ERP| 👨‍👨‍👦 1차 면접 |||
+|30|38|2023 11 06| [경동나비엔](https://recruit.kdfamily.co.kr/info/recruit-detail.do?idx=1110)|대|SAP,ERP|  ❌👨‍👨‍👦 1차 면접 탈락 |업무 분석 x | ERP라는게 자바로 하는 줄 알았는데 아니었나? 보다? 아에 못 알아듣겠더라.|
 |-|39|2023 11 09| [플레티어](https://career.plateer.com/2023) |||❌ 미지원|||
 |31|40|2023 11 10|[도루코](https://dorco.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=161026) |대|| ❌📤 서류탈락|||
 |32|41|2023 11 12|[현대HDS](https://www.hyundaihds.co.kr/homepage/recruit/selectAdoptionDetail.do) |대|어플 개발|📤 서류제출|||
 |-|42|2023 11 12| [SFA](https://recruit.sfa.co.kr/sfa/recruit?id=981&pg=1) |중견||❌ 미지원|||
 |33|43|2023 11 10|[세종텔레콤](https://www.jobkorea.co.kr/Recruit/GI_Read/43201186?Oem_Code=C1) |중견|웹개발| ❌👨‍👨‍👦 1차 면접 미참석|근무 조건|강동구에 본사가 집에서 2시간 거리인데 7:30~18 이었다. 매우 피곤할 것이 예상되는 시간이어서 면접비라도 받으러 갈까 하다가 눈도 오기도 하고 당일 면접취소 문자를 보냈다.|
+|-|44| 2023 11 17  | [메가존클라우드](https://xmukacmt.ninehire.site/job_posting/Z0bpi6pd?lang=en) | 외국계 |솔루션 아키텍트 게이밍|❌ 미지원|||
+|-|45|2023 11 20|[카카오](https://careers.kakao.com/jobs/P-13426) |대|개발자 인턴|❌ 미지원|||
+|-|46|2023 11 21| [현대자동차](https://talent.hyundai.com/apply/applyView.hc?recuYy=2023&recuType=N2&recuCls=549) |||❌ 미지원|||
+|34|47|2023 11 27|[인크로스](https://thecareers.sktelecom.com/Recruit/Detail/3939) |대|프론트엔드|📤 서류제출|||
+|35|48|2023 11 27|[롯데손해보험](https://lotteins.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=163215) |대|IT 개발|📤 서류제출|||
+|36|49|2023 11 30| [한솥](https://www.jobkorea.co.kr/Recruit/GI_Read/43353008?Oem_Code=C1)|중견|디지털기획운영팀|📤 서류제출|||
+|37|50||2023 11 30[하나금융TI 교육](https://hanati.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=159130) ||교육| ❌🤦‍♂️ KDT 불가 미지원 |||
 
-||| 2023 11 17  | [메가존클라우드](https://xmukacmt.ninehire.site/job_posting/Z0bpi6pd?lang=en) | 외국계 |솔루션 아키텍트 게이밍||||
+|38|51|2023 12 03|[아워홈](https://recruit.ourhome.co.kr/recruitview.do) |중견|웹개발|📤 서류제출|||
 
-|||2023 11 20|[카카오](https://careers.kakao.com/jobs/P-13426) |대|개발자 인턴||||
-|||2023 11 21| [현대자동차](https://talent.hyundai.com/apply/applyView.hc?recuYy=2023&recuType=N2&recuCls=549) ||||||
-|||2023 11 30| [티맥스소프트](https://tmaxsoft.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=142081) |중견|||||
+|||2023 11 30 상시| [티맥스소프트](https://tmaxsoft.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=142081) |중견|||||
+
+||||2023 11 30[캐롯손해보험](https://career.carrotins.com/opening) ||||||
 
 
+||||2023 12 04[농협은행 계약직](https://with.nonghyup.com/jbnf/jbnfDtl.do?jbnfSqno=61772) ||||||
 
-|||| ||||||
-|||| ||||||
-|||| ||||||
+|||2023 12 13|[신라스테이](https://www.jobkorea.co.kr/Recruit/GI_Read/43315040?Oem_Code=C1&sc=7) ||||||
+||||[피엠인터내셔널코리아](https://www.jobkorea.co.kr/Recruit/GI_Read/42950635?Oem_Code=C1&sc=7) |외국계|IT||||
+
 |||| ||||||
 |||| ||||||
 |||| ||||||
