--- a/_posts/Resume/2023-09-21-23년지원기업피드백.md
+++ b/_posts/Resume/2023-09-21-23년지원기업피드백.md
@@ -57,26 +57,43 @@ pin: false
 |-|44| 2023 11 17  | [메가존클라우드](https://xmukacmt.ninehire.site/job_posting/Z0bpi6pd?lang=en) | 외국계 |솔루션 아키텍트 게이밍|❌ 미지원|||
 |-|45|2023 11 20|[카카오](https://careers.kakao.com/jobs/P-13426) |대|개발자 인턴|❌ 미지원|||
 |-|46|2023 11 21| [현대자동차](https://talent.hyundai.com/apply/applyView.hc?recuYy=2023&recuType=N2&recuCls=549) |||❌ 미지원|||
-|34|47|2023 11 27|[인크로스](https://thecareers.sktelecom.com/Recruit/Detail/3939) |대|프론트엔드|📤 서류제출|||
+|34|47|2023 11 27|[인크로스](https://thecareers.sktelecom.com/Recruit/Detail/3939) |대|프론트엔드|❌📤 서류탈락|||
 |35|48|2023 11 27|[롯데손해보험](https://lotteins.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=163215) |대|IT 개발|📤 서류제출|||
 |36|49|2023 11 30| [한솥](https://www.jobkorea.co.kr/Recruit/GI_Read/43353008?Oem_Code=C1)|중견|디지털기획운영팀|📤 서류제출|||
 |37|50||2023 11 30[하나금융TI 교육](https://hanati.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=159130) ||교육| ❌🤦‍♂️ KDT 불가 미지원 |||
+|38|52|2023 12 13| [뽐뿌](https://www.jobkorea.co.kr/Recruit/GI_Read/43317169?Oem_Code=C1&sc=7) |벤처|웹개발|📤 서류제출|||
+|39|53|2023 12 09|[웰컴페이먼츠](https://www.jobkorea.co.kr/Recruit/GI_Read/43401346?Oem_Code=C1&sc=7) |중소|선불 백엔드|📤 서류제출|||
+|-|54||2023 11 30[캐롯손해보험](https://career.carrotins.com/opening) |||❌ 미지원|||
+|40|51|2023 12 03|[아워홈](https://recruit.ourhome.co.kr/recruitview.do) |중견|웹개발|📤 서류제출|||
+|-|52|2023 12 03|[가온그룹](https://www.jobkorea.co.kr/Recruit/GI_Read/43400719?Oem_Code=C1) |중견|임베디드|❌ 미지원|임베디드라서||
+|41|53|2023 12 03|[현대 이지웰](https://www.jobkorea.co.kr/Recruit/GI_Read/43416590?Oem_Code=C1&logpath=1&stext=쇼핑몰%20개발&listno=49) |대기업 계열사|웹개발자|📤 서류제출|||
+|-|54|2023 12 03|[도쿄일렉트론코리아](https://tel.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=163190) |외국계||❌ 미지원|||
+|-|55|2023 11 24|[피엠인터내셔널코리아](https://www.jobkorea.co.kr/Recruit/GI_Read/42950635?Oem_Code=C1&sc=7) |외국계|IT||❌ 미지원||
+|-|56|2023 12 04|[경동제약](https://www.jobkorea.co.kr/Recruit/GI_Read/43378322?Oem_Code=C1) ||3년 경력|❌ 미지원|||
+|-|57|2023 12 04|[농협은행](https://with.nonghyup.com/jbnf/jbnfDtl.do?jbnfSqno=61772) ||공공 금융 계약직|❌ 미지원|개발자 아닌 거 같은데||
+|42|58|2023 12 07|[오케이몰](https://www.jobkorea.co.kr/Recruit/GI_Read/43408970?Oem_Code=C1&sc=7) |중견|총괄기획팀 전산|📤 서류제출|||
+|43|59|2023 12 07|[웰컴페이먼츠](https://www.jobkorea.co.kr/Recruit/GI_Read/43268101?GI_No=45725474) |||📤 서류제출|||
 
-|38|51|2023 12 03|[아워홈](https://recruit.ourhome.co.kr/recruitview.do) |중견|웹개발|📤 서류제출|||
 
-|||2023 11 30 상시| [티맥스소프트](https://tmaxsoft.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=142081) |중견|||||
-
-||||2023 11 30[캐롯손해보험](https://career.carrotins.com/opening) ||||||
-
-
-||||2023 12 04[농협은행 계약직](https://with.nonghyup.com/jbnf/jbnfDtl.do?jbnfSqno=61772) ||||||
-
+|||2023 12 10|[오스템임플란트](https://osstem.recruiter.co.kr/appsite/company/index) ||||||
+|||2023 12 10|[현대스틸파이브](https://hyundaisteel-pipe.recruiter.co.kr/career/jobs/8828) ||||||
+|||2023 12 11|[어카운트](https://www.jobkorea.co.kr/Recruit/GI_Read/43445052?Oem_Code=C1&logpath=1&stext=해외%20근무%20개발자&listno=2) ||||||
 |||2023 12 13|[신라스테이](https://www.jobkorea.co.kr/Recruit/GI_Read/43315040?Oem_Code=C1&sc=7) ||||||
-||||[피엠인터내셔널코리아](https://www.jobkorea.co.kr/Recruit/GI_Read/42950635?Oem_Code=C1&sc=7) |외국계|IT||||
+|||2023 12 18|[신협중앙회](https://cu.saramin.co.kr/_service/cu/apply_site/apply/recruit_default.asp) ||||||
+|||2023 12 23|[푸드나무 랭킹닭컴](https://www.jobkorea.co.kr/Recruit/GI_Read/43402500?Oem_Code=C1&logpath=1&stext=쇼핑몰%20개발&listno=1) |중소|자바 2년 경력||||
+
+
+|||상시|[티맥스소프트](https://tmaxsoft.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=142081) |중견|||||
+|||상시|[중고나라](https://joonggonara.ninehire.site/job_posting/z7pPlfBo) ||||||
+
+
 
 |||| ||||||
 |||| ||||||
 |||| ||||||
+|||| ||||||
+|||| ||||||
+
 
 |No.|  날짜  | 기업 |규모| 직무 | 현황 | 탈락 분석 | 실행 계획|
 
