--- a/_posts/Resume/2023-11-27-롯데손해보험.md
+++ b/_posts/Resume/2023-11-27-롯데손해보험.md
@@ -7,11 +7,15 @@
 
 
 ## 지원동기를 구체적으로 기술해주세요. (최대 500자 입력가능)
+[가족]
+코로나 이후 건강에 대한 관심이 증가하면서, 보험 가입자 수도 증가했습니다. 그러나 통계상 60대 이상 노년층이 어플을 혼자 설치할 수 있는 비율은 18%이며, 제 아버지 같은 경우 혼자서 와이파이 연결도 어려워하십니다. 이러한 개인적인 경험을 통해, 기술에 익숙하지 않은 고령자들이 직면하는 문제를 깊이 이해하게 되었습니다. 미래의 인플레이션, AI의 발전, 인구 감소 등의 변화를 고려할 때, 비대면으로 가입하는 실버 사용자 비율이 증가할 것입니다. 더 쉽게 접근할 수 있는 정보 제공 방법의 필요성을 항상 생각했습니다. 
+롯데손해보험에서 사용자에게 미치는 부담을 줄여주는 기술적 해결책을 제공함으로서, 기여할 수 있다고 생각합니다.
+따라서 보험처럼 남아있는 가족의 부담을 덜어주는, 제 가치관과 맞아 롯데손해보험에 크게 기여할 수 있다고 생각되어 지원하게 되었습니다.
 
 
 ## 성장과정을 구체적으로 기술해주세요. (최대 800자 입력가능)
-저는 지방세 관련한 공공기관 SI에서 근무한 경험이 있습니다. 신입으로 들어갔기 때문에 지방세외수입, 레저세, 지역자원시설세 등 주로 법 개정이 적은 항목을 담당하여 개발 및 유지보수를 진행하였습니다.
-당시에 실명 인증 프로세스를 개발했습니다. 사용자가 입력한 주민등록번호로 시민 정보를 가지고 있는 API와 연계하여, XML에 쿼리를 작성해서, ESB를 활용하여 Massage Bus로 값을 받아오는 방식이었습니다. 이후에는 Drill Down 분석 방식을 통하여 시스템 구조를 파악하였고, 막히는 부분은 동료 개발자의 피드백을 적극 수용하여 API를 활용한 실명인증 기능을 개발하였습니다. 
+은행에서 종사하신 아버지 덕분에 금융권에 관심을 가지게 되어, 작년에 돈을 다룬다는 부분에서 유사하다고 느낀 지방세 관련 업무에 도전한 경험이 있습니다. 신입으로 들어갔기 때문에 지방세외수입, 레저세, 지역자원시설세 등 주로 법 개정이 적은 항목을 담당하여 개발 및 유지보수를 진행하였습니다.
+당시에 실명 인증 프로세스를 개발했습니다. 사용자가 입력한 주민등록번호로 시민 정보를 가지고 있는 API와 연계하여, XML에 쿼리를 작성해서, ESB로 값을 받아오는 방식이었습니다. 이후에는 Drill Down 분석 방식을 통하여 시스템 구조를 파악하였고, 막히는 부분은 동료 개발자의 피드백을 적극 수용하여 API를 활용한 실명인증 기능을 개발하였습니다. 
 주로 업무를 진행할 때, 데이터 베이스의 Table에서 데이터를 가져와 처리하여 프로젝트를 진행하게 되는데, 쿼리를 통해 성능 최적화에 신경을 썼습니다. 
 이러한 경험으로 공공기관에서 다루는 시스템의 정보 이동 방식에 대한 이해와 보안이 없이 처리 되던 작업을 자동화하여 고객사의 만족도를 상승시킬 수 있었습니다.
 
@@ -34,4 +38,5 @@ Spring을 사용하는 지방세 관련 공공기관 SI에서 근무할 당시, 
 신입으로서 크게 경쟁력을 강화할 수 있는 혁신적인 아이디어보다는 작게나마 인력 소비를 줄일 수 있는 방식이 제 가장 큰 현실적 강점이라고 생각합니다.
 
 ## 입사 후 포부를 구체적으로 기술해주세요. (최대 500자 입력가능)
+보험은 빅데이터를 통한 소비자의 트랜드 파악이 중요하다고 생각합니다.
 입사 후 꿈꾸는 모습은 `변화의 주역`입니다. 새로운 기술 도입이나 업무 프로세스 개선을 주도하여, 회사가 보다 빠르게 변화하는 시장 환경에 적응할 수 있도록 팀원들과 소통하여 문제를 해결해 나가고 싶습니다. 특히, 인공지능과 머신러닝을 활용한 데이터 분석 역량을 갖추어 고객의 필요를 미리 파악하고 이를 개발에 반영하는 것을 목표로 하고 있습니다.
